misc updates, including ABX-PRO

--- a/results-exchanger-cleaning.html
+++ b/results-exchanger-cleaning.html
@@ -29,6 +29,18 @@ permalink: /exchanger-cleaning-applications
 
       <div class="media">
         <div class="media-left">
+          <a href="/abx-2l">
+            <img class="media-object" src="assets/img/product/thumb-abx-pro-02.jpg" alt="AutoBox ABX-PRO">
+          </a>
+        </div>
+        <div class="media-body">
+          <a href="/abx-pro"><h4 class="media-heading">AutoBox ABX-PRO</h4></a>
+          Automated hose feed
+        </div>
+      </div>
+
+      <div class="media">
+        <div class="media-left">
           <a href="/bundle-blaster">
             <img class="media-object" src="assets/img/product/thumb-bundle-blaster-01.jpg" alt="Bundle Blaster">
           </a>
