--- a/results-pipe-cleaning.html
+++ b/results-pipe-cleaning.html
@@ -29,24 +29,24 @@ permalink: /pipe-cleaning-applications
 
       <div class="media">
         <div class="media-left">
+          <a href="/abx-2l">
+            <img class="media-object" src="assets/img/product/thumb-abx-pro-02.jpg" alt="AutoBox ABX-PRO">
+          </a>
+        </div>
+        <div class="media-body">
+          <a href="/abx-pro"><h4 class="media-heading">AutoBox ABX-PRO</h4></a>
+          Automated hose feed
+        </div>
+      </div>
+
+      <div class="media">
+        <div class="media-left">
           <a href="/navigator">
             <img class="media-object" src="assets/img/product/thumb-navigator-01.jpg" alt="Navigator">
           </a>
         </div>
         <div class="media-body">
           <a href="/navigator"><h4 class="media-heading">Navigator</h4></a>
-          Automated hose drive and containment system
-        </div>
-      </div>
-
-      <div class="media">
-        <div class="media-left">
-          <a href="/prodrive">
-            <img class="media-object" src="assets/img/product/thumb-prodrive-01.jpg" alt="ProDrive">
-          </a>
-        </div>
-        <div class="media-body">
-          <a href="/prodrive"><h4 class="media-heading">ProDrive</h4></a>
           Automated hose drive and containment system
         </div>
       </div>
