--- a/rotary-waterblast-tools/badger-2in-pipe-cleaning.html
+++ b/rotary-waterblast-tools/badger-2in-pipe-cleaning.html
@@ -27,25 +27,25 @@ master-slider: yes
       <div class="ms-showcase2-template">
         <div class="master-slider ms-skin-default" id="masterslider">
           <div class="ms-slide">
-            <img class="ms-brd" src="../assets/img/blank.gif" data-src="../assets/img/product/badger-2in-01.jpg" alt="Badger high pressure cleaning for small pipes with bends">
-            <img class="ms-thumb" src="../assets/img/product/thumb-badger-2in-01.jpg" alt="thumb">
+            <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/badger-2in-01.jpg" alt="Badger high pressure cleaning for small pipes with bends">
+            <img class="ms-thumb" src="/assets/img/product/thumb-badger-2in-01.jpg" alt="thumb">
               <a data-type="video" href="https://www.youtube.com/embed/nle0DdQzXMc"> </a>
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/badger-2in-02.jpg" alt="Badger high pressure cleaning for small pipes with bends">
-            <img class="ms-thumb" src="../assets/img/product/thumb-badger-2in-02.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/badger-2in-02.jpg" alt="Badger high pressure cleaning for small pipes with bends">
+            <img class="ms-thumb" src="/assets/img/product/thumb-badger-2in-02.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/badger-2in-03.jpg" alt="Badger high pressure cleaning for small pipes with bends">
-            <img class="ms-thumb" src="../assets/img/product/thumb-badger-2in-03.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/badger-2in-03.jpg" alt="Badger high pressure cleaning for small pipes with bends">
+            <img class="ms-thumb" src="/assets/img/product/thumb-badger-2in-03.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/badger-2in-04.jpg" alt="Badger high pressure cleaning for small pipes with bends">
-            <img class="ms-thumb" src="../assets/img/product/thumb-badger-2in-04.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/badger-2in-04.jpg" alt="Badger high pressure cleaning for small pipes with bends">
+            <img class="ms-thumb" src="/assets/img/product/thumb-badger-2in-04.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/badger-2in-06.jpg" alt="Badger high pressure cleaning for small pipes with bends">
-            <img class="ms-thumb" src="../assets/img/product/thumb-badger-2in-06.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/badger-2in-06.jpg" alt="Badger high pressure cleaning for small pipes with bends">
+            <img class="ms-thumb" src="/assets/img/product/thumb-badger-2in-06.jpg" alt="thumb">
           </div>
         </div>
       </div>
@@ -169,7 +169,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Maximum Water Temp.</th>
-                      <td>270 &deg;F</td>
+                      <td>250 &deg;F</td>
                       <td><span class="metric">120 &deg;C</span></td>
                     </tr>
                   </tbody>
@@ -238,7 +238,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Maximum Water Temp.</th>
-                      <td>270 &deg;F</td>
+                      <td>250 &deg;F</td>
                       <td><span class="metric">120 &deg;C</span></td>
                     </tr>
                   </tbody>
@@ -307,7 +307,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Maximum Water Temp.</th>
-                      <td>270 &deg;F</td>
+                      <td>250 &deg;F</td>
                       <td><span class="metric">120 &deg;C</span></td>
                     </tr>
                   </tbody>
@@ -375,8 +375,8 @@ master-slider: yes
           <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
             <div class="panel-body">
               <ul>
-                <li><a href="../assets/pdf/manuals/ba-lk-2in_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;2" Badger User Manual</a></li>
-                <li><a href="../assets/pdf/sales-manual/BA2_config.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;2" Badger Tool Talk</a></li>
+                <li><a href="/assets/pdf/manuals/ba-lk-2in_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;2" Badger User Manual</a></li>
+                <li><a href="/assets/pdf/ba-2in_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;2" Badger Tool Talk</a></li>
                 <li><a href="http://jetting.stoneagetools.com/tool/jetting-app.html" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
               </ul>
               <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
@@ -386,7 +386,7 @@ master-slider: yes
         </div><!-- end tab -->
       </div><!-- end accordion -->
 
-      <a href="../contact.html" class="btn btn-lg btn-block contact" role="button">Contact Us for Availability</a>
+      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button">Contact Us for Availability</a>
 
   </div>
   <!-- End Product Info -->
@@ -402,23 +402,23 @@ master-slider: yes
   </div>
   <div class="row row-centered">
     <div class="col-sm-2 col-centered">
-      <a href="/abx-500"><img class="img-responsive" src="../assets/img/product/abx-500-03.jpg" alt="AutoBox ABX-500">
+      <a href="/abx-500"><img class="img-responsive" src="/assets/img/product/abx-500-03.jpg" alt="AutoBox ABX-500">
       <h5>AutoBox ABX-500</h5></a>
     </div>
     <div class="col-sm-2 col-centered">
-      <a href="/boiler-tube-cleaner"><img class="img-responsive" src="../assets/img/product/thumb-btc-01.jpg" alt="Boiler Tube Cleaner">
+      <a href="/boiler-tube-cleaner"><img class="img-responsive" src="/assets/img/product/thumb-btc-01.jpg" alt="Boiler Tube Cleaner">
       <h5>Boiler Tube Cleaner</h5></a>
     </div>
     <div class="col-sm-2 col-centered">
-      <a href="/4inch-badger"><img class="img-responsive" src="../assets/img/product/thumb-badger-4in-02.jpg" alt="64inch Badger">
+      <a href="/4inch-badger"><img class="img-responsive" src="/assets/img/product/thumb-badger-4in-02.jpg" alt="64inch Badger">
       <h5>4" Badger</h5></a>
     </div>
     <div class="col-sm-2 col-centered">
-      <a href="/6inch-badger"><img class="img-responsive" src="../assets/img/product/thumb-badger-6in-02.jpg" alt="6-inch Badger">
+      <a href="/6inch-badger"><img class="img-responsive" src="/assets/img/product/thumb-badger-6in-02.jpg" alt="6-inch Badger">
       <h5>6" Badger</h5></a>
     </div>
     <div class="col-sm-2 col-centered">
-      <a href="/backout-prevention"><img class="img-responsive" src="../assets/img/thumb/thumb-backout-preventers.jpg" alt="High pressure pipe cleaning backout preventers">
+      <a href="/backout-prevention"><img class="img-responsive" src="/assets/img/thumb/thumb-backout-preventers.jpg" alt="High pressure pipe cleaning backout preventers">
       <h5>Backout Prevention</h5></a>
     </div>
   </div>
@@ -460,23 +460,23 @@ master-slider: yes
       <div class="item active">
 <!--
         <div class="insight">
-          <img src="../assets/img/quote.png" alt="quote" class="quote" />
+          <img src="/assets/img/quote.png" alt="quote" class="quote" />
           <p>We use equipment in the worst environments that you could possibly put them in… Sometimes I can’t see for the life of me how they hold up under these conditions, but they do.</p>
           <p class="signed">-Mike House</p>
         </div>
 -->
-        <img src="../assets/img/sliders/2in-badger-pipe.jpg" alt="Badger high pressure pipe cleaning tools">
+        <img src="/assets/img/sliders/2in-badger-pipe.jpg" alt="Badger high pressure pipe cleaning tools">
       </div>
 
       <div class="item">
 <!--
         <div class="insight">
-          <img src="../assets/img/quote.png" alt="quote" class="quote" />
+          <img src="/assets/img/quote.png" alt="quote" class="quote" />
           <p>The StoneAge ABX-2L works great in acid service and has allowed us to become 100% automated.</p>
           <p class="signed">- Mark Blanchard,<br/>Water Works Industrial Services</p>
         </div>
 -->
-        <img src="../assets/img/sliders/bc_models.jpg" alt="Barracuda low flow shotgunning">
+        <img src="/assets/img/sliders/bc_models.jpg" alt="Barracuda low flow shotgunning">
       </div>
 
     </div><!-- End wrapper -->
