--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -55,7 +55,7 @@ permalink: /waterblast-tools-automated-equipment
           <div class="list-group">
             <a href="#" class="list-group-item header">Automated Pipe Cleaning</a>
             <a href="/navigator" class="list-group-item">Navigator<span class="label label-warning">New for 2016</span></a>
-            <a href="/prodrive" class="list-group-item">AutoBox ProDrive<span class="label label-warning">New for 2016</span></a>
+            <a href="/abx-pro" class="list-group-item">AutoBox ABX-PRO<span class="label label-warning">New for 2016</span></a>
             <a href="/abx-500" class="list-group-item">AutoBox ABX-500<span class="label label-info">Pipes and Vessels</span></a>
             <a href="/id-pipe-cleaner" class="list-group-item">ID Pipe Cleaner</a>
             <a href="/od-pipe-cleaner" class="list-group-item">OD Pipe Cleaner</a>
