--- a/waterblast-automation/hose-containment.html
+++ b/waterblast-automation/hose-containment.html
@@ -115,8 +115,16 @@ master-slider: yes
                       <td><span class="metric">1500 bar</span></td>
                     </tr>
                     <tr>
-                      <th>Storage Capacity*</th>
-                      <td>84 ft</td>
+                      <th>Hose Size</th>
+                      <td colspan="2">&le; 6/4</td>
+                    </tr>
+                    <tr>
+                      <th>Hose Connections</th>
+                      <td colspan="2">.56 Type M to .75 Type M</td>
+                    </tr>
+                    <tr>
+                      <th>Storage Capacity&#42;</th>
+                      <td>84 ft (2 hoses)</td>
                       <td><span class="metric">25 m</span></td>
                     </tr>
                     <tr>
@@ -124,17 +132,14 @@ master-slider: yes
                       <td colspan="2">1.00 Type M to MP12</td>
                     </tr>
                     <tr>
-                      <th>Hose Connections</th>
-                      <td colspan="2">.56 Type M to .75 Type M</td>
-                    </tr>
-                    <tr>
                       <th>Dimensions</th>
                       <td>28.6 x 15.4 in.</td>
                       <td><span class="metric">73 x 39 cm</span></td>
                     </tr>
                     <tr>
-                      <th>Hose Size</th>
-                      <td colspan="2">&le; 6/4</td>
+                      <th>Snout Length</th>
+                      <td>90 in.</td>
+                      <td><span class="metric">228 cm</span></td>
                     </tr>
                     <tr>
                       <th>Weight</th>
@@ -143,6 +148,7 @@ master-slider: yes
                     </tr>
                   </tbody>
                   </table>
+                  <p>&#42; Based on 6/4 size hose</p>
                 </div>
                 <!-- M24 -->     
                 <div role="tabpanel" class="tab-pane" id="m24">
@@ -158,31 +164,31 @@ master-slider: yes
                       <td><span class="metric">1500 bar</span></td>
                     </tr>
                     <tr>
-                      <th>Storage Capacity&#42;</th>
-                      <td>84 ft (2 hoses)</td>
-                      <td><span class="metric">25 m</span></td>
-                    </tr>
-                    <tr>
                       <th>Hose Size</th>
                       <td colspan="2">&le; 6/4</td>
-                    </tr>
-                    <tr>
-                      <th>Swivel Inlet</th>
-                      <td colspan="2">MP12 to M24C</td>
                     </tr>
                     <tr>
                       <th>Hose Connections</th>
                       <td colspan="2">MP6 to BSPP4C</td>
                     </tr>
                     <tr>
-                      <th>Snout Length</th>
-                      <td>90 in.</td>
-                      <td><span class="metric">228 cm</span></td>
+                      <th>Storage Capacity&#42;</th>
+                      <td>84 ft (2 hoses)</td>
+                      <td><span class="metric">25 m</span></td>
+                    </tr>
+                    <tr>
+                      <th>Swivel Inlet</th>
+                      <td colspan="2">MP12 to M24C</td>
                     </tr>
                     <tr>
                       <th>Dimensions</th>
                       <td>28.6 x 15.4 in.</td>
                       <td><span class="metric">73 x 39 cm</span></td>
+                    </tr>
+                    <tr>
+                      <th>Snout Length</th>
+                      <td>90 in.</td>
+                      <td><span class="metric">228 cm</span></td>
                     </tr>
                     <tr>
                       <th>Weight</th>
