--- a/waterblast-automation/prodrive-hose-feed.html
+++ b/waterblast-automation/prodrive-hose-feed.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 page-type: product
-title: StoneAge ProDrive Hose Feed for Pipe Cleaning
-permalink: /prodrive
+title: StoneAge AutoBox ABX-PRO Hose Feed for Pipe Cleaning
+permalink: /abx-pro
 master-slider: yes
 ---
 
@@ -12,7 +12,7 @@ master-slider: yes
     <ul class="breadcrumb">
       <li><a href="/">Home</a></li>
       <li><a href="/waterblast-tools-automated-equipment">Waterblast Tools &amp; Equipment</a></li>
-      <li class="active">ProDrive</li>
+      <li class="active">AutoBox ABX-PRO</li>
     </ul> 
   </div>
 </div>
@@ -27,17 +27,27 @@ master-slider: yes
       <div class="ms-showcase2-template">
         <div class="master-slider ms-skin-default" id="masterslider">
           <div class="ms-slide">
-            <img class="ms-brd" src="../assets/img/blank.gif" data-src="../assets/img/product/prodrive-01.jpg" alt="StoneAge ProDrive hose feed device">
-            <img class="ms-thumb" src="../assets/img/product/thumb-prodrive-01.jpg" alt="thumb">
+            <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/abx-pro-03.jpg" alt="StoneAge ProDrive hose feed device">
+            <img class="ms-thumb" src="/assets/img/product/thumb-abx-pro-03.jpg" alt="thumb">
               <a data-type="video" href="https://www.youtube.com/embed/vGgs7_6oxHU"> </a>
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/prodrive-03.jpg" alt="StoneAge ProDrive remote controlled pipe cleaning">
-            <img class="ms-thumb" src="../assets/img/product/thumb-prodrive-03.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/abx-pro-02.jpg" alt="StoneAge ProDrive remote controlled pipe cleaning">
+            <img class="ms-thumb" src="/assets/img/product/thumb-abx-pro-02.jpg" alt="thumb">
+          </div>
+<!--
+          <div class="ms-slide">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/abx-pro-01.jpg" alt="StoneAge ProDrive remote controlled pipe cleaning">
+            <img class="ms-thumb" src="/assets/img/product/thumb-abx-pro-01.jpg" alt="thumb">
+          </div>
+-->
+          <div class="ms-slide">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/abx-pro-04.jpg" alt="StoneAge ProDrive remote controlled pipe cleaning">
+            <img class="ms-thumb" src="/assets/img/product/thumb-abx-pro-04.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/prodrive-02.jpg" alt="StoneAge ProDrive remote controlled pipe cleaning">
-            <img class="ms-thumb" src="../assets/img/product/thumb-prodrive-02.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/abx-pro-05.jpg" alt="StoneAge ProDrive remote controlled pipe cleaning">
+            <img class="ms-thumb" src="/assets/img/product/thumb-abx-pro-05.jpg" alt="thumb">
           </div>
         </div>
       </div>
@@ -47,17 +57,17 @@ master-slider: yes
     <!-- Product Info -->
     <div class="col-md-6 padding-left-60">
       <div class="product-heading">
-        <h1>AutoBox ProDrive</h1>
+        <h1>AutoBox ABX-PRO</h1>
         <div class="dropdown product-social">
           <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i> Share</a>
           <ul class="dropdown-menu">
-            <li><a href="mailto:?subject=StoneAge ProDrive&body=Check out the ProDrive hose feed device engineered to quickly and safely clean a broad range of pipes:  http://www.stoneagetools.com/prodrive">E-mail link</a></li>
+            <li><a href="mailto:?subject=StoneAge AutoBox ABX-PRO&body=Check out the ABX-PRO hose feed device engineered to quickly and safely clean a broad range of pipes:  http://www.stoneagetools.com/abx-pro">E-mail link</a></li>
           </ul>
         </div>
       <div class="clearfix"></div>
       </div>
 
-      <p class="product-description">The ProDrive is a hose feed device engineered to quickly and safely clean a broad range of pipes with or without a flange. The system is lightweight portable, and highly adaptable, making it the perfect tool for limited access applications.</p>
+      <p class="product-description">The AutoBox ABX-PRO is a hose feed device engineered to quickly and safely clean a broad range of small pipe configurations with or without a flange. The system is lightweight portable, and highly adaptable, making it the perfect tool for limited access applications.</p>
       <p class="product-description">Multiple mounting options are available for use with a variety of pipe sizes and configurations. The system also includes a lightweight control box for increased safety and mobility.</p>
 
       <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
@@ -72,7 +82,7 @@ master-slider: yes
           <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
             <div class="panel-body">
               <ul>
-                <li>Lightweight and portable, the ProDrive is ideal for limited access pipe cleaning applications</li>
+                <li>Lightweight and portable, the ABX-PRO is ideal for limited access pipe cleaning applications</li>
                 <li>Accommodates multiple hose sizes</li>
                 <li>Built in backout preventer and splash guard for operator safety</li>
                 <li>Adjustable forwards and reverse feed rates maintain optimal dwell time</li>
@@ -100,7 +110,12 @@ master-slider: yes
                 </tr>
                 <tr>
                   <th>Tool Model</th>
-                  <td colspan="2">ProDrive ABX-PRO</td>
+                  <td colspan="2">ABX-PRO</td>
+                </tr>
+                <tr>
+                  <th>Pipe Size</th>
+                  <td>2-8 in.</td>
+                  <td class="metric">51–203 mm</td>
                 </tr>
                 <tr>
                   <th>Feed Rate</th>
@@ -140,11 +155,11 @@ master-slider: yes
                 <!-- Lightbox call -->
                 <div>
                   <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #pro-vid">
-                    <img src="/assets/vid/thumb/pro-vid.png" alt="NAutoBox ProDrive Overviewvideo" class="img-responsive" />
+                    <img src="/assets/vid/thumb/pro-vid.png" alt="AutoBox ProDrive Overviewvideo" class="img-responsive" />
                   </a>
                 </div>
                 <!-- End Lightbox call -->
-                <p class="caption">AutoBox ProDrive Overview</p>
+                <p class="caption">AutoBox ABX-PRO Overview</p>
               </div>
             </div>
           </div>
@@ -160,9 +175,9 @@ master-slider: yes
           <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
             <div class="panel-body">
               <ul>
-                <li><a href="../assets/pdf/prodrive_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox ProDrive Data Sheet</a></li>
-                <li><a href="../assets/pdf/manuals/ABX-PRO_manual_web.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox ProDrive PRO-100 User Manual</a></li>
-                <li><a href="../assets/pdf/prodrive_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox ProDrive Tool Talk</a></li>
+                <li><a href="/assets/pdf/abx-pro_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox ABX-PRO Data Sheet</a></li>
+                <li><a href="/assets/pdf/manuals/ABX-PRO_manual_web.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox ABX-PRO Manual</a></li>
+                <li><a href="/assets/pdf/abx-pro_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox ABX-PRO Tool Talk</a></li>
               </ul>
               <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
               <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
@@ -171,7 +186,7 @@ master-slider: yes
         </div><!-- end tab -->
       </div><!-- end accordion -->
 
-      <a href="http://info.stoneagetools.com/prodrive-quote" class="btn btn-lg btn-block contact" role="button">Request a Quote</a>
+      <a href="/contact" class="btn btn-lg btn-block contact" role="button">Contact Us for Availability</a>
 
   </div>
   <!-- End Product Info -->
@@ -187,16 +202,16 @@ master-slider: yes
   </div>
   <div class="row row-centered">
     <div class="col-sm-2 col-centered">
-      <a href="/banshee"><img class="img-responsive" src="../assets/img/product/thumb-banshee-04.jpg" alt="Banshee Beetle tube cleaning tools">
-      <h5>Banshee Beetle Tube Cleaning Tools</h5></a>
+      <a href="/beetle"><img class="img-responsive" src="/assets/img/product/thumb-banshee-04.jpg" alt="Beetle tube cleaning tools">
+      <h5>Beetle</h5></a>
     </div>
     <div class="col-sm-2 col-centered">
-      <a href="/2inch-badger"><img class="img-responsive" src="../assets/img/product/thumb-badger-2in-06.jpg" alt="2-inch Badger Pipe Cleaning Tools">
-      <h5>2" Badger Pipe Cleaning Tools</h5></a>
+      <a href="/2inch-badger"><img class="img-responsive" src="/assets/img/product/thumb-badger-2in-04.jpg" alt="2-inch Badger Pipe Cleaning Tools">
+      <h5>2" Badger</h5></a>
     </div>
     <div class="col-sm-2 col-centered">
-      <a href="/navigator"><img class="img-responsive" src="../assets/img/product/thumb-navigator-01.jpg" alt="Navigator protable rotary hose device">
-      <h5>Navigator Portable Rotary Hose Device</h5></a>
+      <a href="/navigator"><img class="img-responsive" src="/assets/img/product/thumb-navigator-01.jpg" alt="Navigator protable rotary hose device">
+      <h5>Navigator</h5></a>
     </div>
   </div>
 </section>
@@ -208,12 +223,12 @@ master-slider: yes
     <div class="col-md-7">
 
         <h2>Automated Hose Feed for Pipe Cleaning</h2>
-        <p>Lightweight and portable, the ProDrive is the perfect tool for limited access pipe cleaning applications.</p>
+        <p>Lightweight and portable, the ABX-PRO is the perfect tool for limited access pipe cleaning applications.</p>
     </div>
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
-          <td><a href="../assets/pdf/prodrive_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
+          <td><a href="/assets/pdf/prodrive_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
 <!--            <td><a href="#"><i class="fa fa-files-o"></i><br>Download Case Study</a></td>-->
           <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
@@ -237,23 +252,23 @@ master-slider: yes
       <div class="item active">
 <!--
         <div class="insight">
-          <img src="../assets/img/quote.png" alt="quote" class="quote" />
+          <img src="/assets/img/quote.png" alt="quote" class="quote" />
           <p>The Striker worked great clearing hardened plastic polymer from piping equipment and allowed us to go 100% automated.</p>
           <p class="signed">-James Schafer,<br/>Debusk Services Group</p>
         </div>
 -->
-        <img src="../assets/img/sliders/prodrive-demo-02.jpg" alt="Striker remote automated shotgun cleaning">
+        <img src="/assets/img/sliders/prodrive-demo-02.jpg" alt="Striker remote automated shotgun cleaning">
       </div>
 
       <div class="item">
 <!--
         <div class="insight">
-          <img src="../assets/img/quote.png" alt="quote" class="quote" />
+          <img src="/assets/img/quote.png" alt="quote" class="quote" />
           <p>The StoneAge ABX-2L works great in acid service and has allowed us to become 100% automated.</p>
           <p class="signed">- Mark Blanchard,<br/>Water Works Industrial Services</p>
         </div>
 -->
-        <img src="../assets/img/sliders/prodrive-demo-01.jpg" alt="Striker remote automated shotgun cleaning">
+        <img src="/assets/img/sliders/prodrive-demo-01.jpg" alt="Striker remote automated shotgun cleaning">
       </div>
 
     </div><!-- End wrapper -->
