add htaccess, custom 404 page

--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 layout: default
 page-type: page
 title: StoneAge High Pressure Waterblast Tools Automated Equipment 
-permalink: /404.html
+permalink: 404.html
 ---
   
 <div class="fluid-container landing-nav">
