--- a/rentals.html
+++ b/rentals.html
@@ -11,11 +11,61 @@ master-slider: yes
     <h1 class="page-heading">Rent StoneAge Tools &amp; Equipment</h1>
   </div>
 </div>
+
 <section class="fluid-container bg-lt-gray margin-top-30">
   <div class="container">
-    <img src="/assets/img/rental_image_002.jpg" alt="StoneAge Rentals" class="img-responsive" />
+    <div class="col-sm-4 padding-tb-30">
+      <img src="/assets/img/available-now.jpg" alt="Available now" class="img-responsive"/>
+      <h2>in our regional rental fleets</h2>
+    </div>
+    <div class="col-sm-8" >
+      <div id="rentalsCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#rentalsCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#rentalsCarousel" data-slide-to="1"></li>
+          <li data-target="#rentalsCarousel" data-slide-to="2"></li>
+          <li data-target="#rentalsCarousel" data-slide-to="3"></li>
+          <li data-target="#rentalsCarousel" data-slide-to="4"></li>
+        </ol>
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+          <div class="item active">
+            <img src="/assets/img/for_rentals_abx-3l_01.jpg" alt="AutoBox ABX-3L">
+          </div>
+
+          <div class="item">
+            <img src="/assets/img/for_rentals_abx-pro_01.jpg" alt="AutoBox ABX-PRO">
+          </div>
+
+          <div class="item">
+            <img src="/assets/img/for_rentals_skr_01.jpg" alt="Striker surface prep">
+          </div>
+
+          <div class="item">
+            <img src="/assets/img/for_rentals_abx-500_01.jpg" alt="AutoBox ABX-500">
+          </div>
+
+          <div class="item">
+            <img src="/assets/img/for_rentals_bc_01.jpg" alt="Rotary tools for surface prep">
+          </div>
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#rentalsCarousel" role="button" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#rentalsCarousel" role="button" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div><!-- end Carousel -->
+    </div>
   </div>
 </section>
+
 <section class="fluid-container bg-lt-grey padding-tb-30">
   <div class="container">
     <h2 class="slab bold spaced margin-bottom-30" style="font-size:30px;">Contact a rental facility near you</h2>
