many misc updates

--- a/index.html
+++ b/index.html
@@ -168,19 +168,12 @@ permalink: /
       <h2>Events</h2>
     </div>
     <div class="row">
-      <a href="http://www.tristateseminar.com/" target="_blank"><img src="/assets/img/thumb/upcoming_events_tri-state_2016.JPG" class="img-responsive"/></a>
+      <a href="http://info.stoneagetools.com/visit-us-at-wjta-imca-expo-2016"><img src="/assets/img/thumb/upcoming-events-wjta-expo16.png" class="img-responsive"/ alt="Visit StoneAge at WJTA-IMCA Expo 2016"></a>
       <div class="caption">
-      <h4><a href="http://www.tristateseminar.com/" target="_blank">Tri-State Seminar<br><span class="small">September 20-22, 2016<br/>
+      <h4><a href="http://info.stoneagetools.com/visit-us-at-wjta-imca-expo-2016">WJTA-IMCA Expo<br><span class="small">November 2-3, 2016<br/>
           Las Vegas, NV</span></a></h4>
-        <p><strong>Visit Us in Booth #1113</strong></p>
-      </div>
-    </div>
-    <div class="row">
-      <a href="http://www.weftec.org/" target="_blank"><img src="/assets/img/thumb/upcoming-event-weftec-2016.jpg" class="img-responsive"/></a>
-      <div class="caption">
-      <h4><a href="http://www.weftec.org/" target="_blank">WEFTEC<br><span class="small">September 24-28, 2016<br/>
-          New Orleans, LA</span></a></h4>
-        <p><strong>Visit Us in Booth #7259</strong></p>
+        <p><strong>Visit Us in Booth #903</strong></p>
+        <p>The WJTA-IMCA Expo is the annual tradeshow of the WaterJet Technology Association-Industrial &amp; Municipal Cleaning Association (WJTA-IMCA). The Expo serves the global hydroblasting, vacuum truck, industrial cleaning and waterjet markets.</p>
       </div>
     </div>
   </div>
