--- a/rotary-waterblast-tools/spitfire-shotgunning.html
+++ b/rotary-waterblast-tools/spitfire-shotgunning.html
@@ -27,13 +27,13 @@ master-slider: yes
       <div class="ms-showcase2-template">
         <div class="master-slider ms-skin-default" id="masterslider">
           <div class="ms-slide">
-            <img class="ms-brd" src="../assets/img/blank.gif" data-src="../assets/img/product/spitfire-01.jpg" alt="lorem ipsum dolor sit">
-            <img class="ms-thumb" src="../assets/img/product/thumb-spitfire-01.jpg" alt="thumb">
+            <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/spitfire-01.jpg" alt="lorem ipsum dolor sit">
+            <img class="ms-thumb" src="/assets/img/product/thumb-spitfire-01.jpg" alt="thumb">
               <a data-type="video" href="https://www.youtube.com/embed/qZog9cnRviw"> </a>
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/spitfire-02.jpg" alt="lorem ipsum dolor sit">
-            <img class="ms-thumb" src="../assets/img/product/thumb-spitfire-02.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/spitfire-02.jpg" alt="lorem ipsum dolor sit">
+            <img class="ms-thumb" src="/assets/img/product/thumb-spitfire-02.jpg" alt="thumb">
           </div>
         </div>
       </div>
@@ -171,8 +171,8 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Pressure Range</th>
-                      <td>5–15k psi</td>
-                      <td><span class="metric">340–1000 bar</span
+                      <td>5–22k psi</td>
+                      <td><span class="metric">340–1500 bar</span
                     ></tr>
                     <tr>
                       <th>Flow Range</th>
@@ -211,8 +211,8 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Weight</th>
-                      <td>1.5 lb (S) 1.7 lb (B)</td>
-                      <td><span class="metric">0.7 kg (S) 0.8 kg (B)</span></td>
+                      <td>1.5 lb (S), 1.7 lb (B)</td>
+                      <td><span class="metric">0.7 kg (S), 0.8 kg (B)</span></td>
                     </tr>
                     <tr>
                       <th>Maximum Water Temp.</th>
@@ -270,8 +270,8 @@ master-slider: yes
           <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
             <div class="panel-body">
               <ul>
-                <li><a href="../assets/pdf/manuals/spfr_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Spitfire User Manual</a></li>
-                <li><a href="../assets/pdf/sales-manual/SPFR_config.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Spitfire Tool Talk</a></li>
+                <li><a href="/assets/pdf/manuals/spfr_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Spitfire User Manual</a></li>
+                <li><a href="/assets/pdf/sales-manual/SPFR_config.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Spitfire Tool Talk</a></li>
               </ul>
               <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
               <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
@@ -280,7 +280,7 @@ master-slider: yes
         </div><!-- end tab -->
       </div><!-- end accordion -->
 
-      <a href="../contact.html" class="btn btn-lg btn-block contact" role="button">Contact Us for Availability</a>
+      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button">Contact Us for Availability</a>
     </div>
   </div>
   <!-- End Product Info -->
@@ -295,11 +295,11 @@ master-slider: yes
   </div>
   <div class="row row-centered">
     <div class="col-sm-2 col-centered">
-      <a href="/striker"><img class="img-responsive" src="../assets/img/product/striker-02.jpg" alt="Striker surface prep">
+      <a href="/striker"><img class="img-responsive" src="/assets/img/product/striker-02.jpg" alt="Striker surface prep">
       <h5>Striker</h5></a>
     </div>
     <div class="col-sm-2 col-centered">
-      <a href="/barracuda"><img class="img-responsive" src="../assets/img/product/thumb-barracuda-01.jpg" alt="Barracuda rotary shotgun tools">
+      <a href="/barracuda"><img class="img-responsive" src="/assets/img/product/thumb-barracuda-01.jpg" alt="Barracuda rotary shotgun tools">
       <h5>Barracuda</h5></a>
     </div>
   </div>
@@ -317,7 +317,7 @@ master-slider: yes
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
-          <td><a href="../assets/pdf/sales-manual/SPFR_config.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Tool Talk</a></td>
+          <td><a href="/assets/pdf/sales-manual/SPFR_config.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Tool Talk</a></td>
           <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
       </table>
@@ -339,22 +339,22 @@ master-slider: yes
     <div class="carousel-inner" role="listbox">
       <div class="item active">
         <div class="insight">
-          <img src="../assets/img/quote.png" alt="quote" class="quote" />
+          <img src="/assets/img/quote.png" alt="quote" class="quote" />
           <p>We use equipment in the worst environments that you could possibly put them in… Sometimes I can’t see for the life of me how they hold up under these conditions, but they do.</p>
           <p class="signed">-Mike House</p>
         </div>
-        <img src="../assets/img/sliders/spitfire-demo.jpg" alt="Spirfire rotary shotgunning">
+        <img src="/assets/img/sliders/spitfire-demo.jpg" alt="Spirfire rotary shotgunning">
       </div>
 
       <div class="item">
 <!--
         <div class="insight">
-          <img src="../assets/img/quote.png" alt="quote" class="quote" />
+          <img src="/assets/img/quote.png" alt="quote" class="quote" />
           <p>The StoneAge ABX-2L works great in acid service and has allowed us to become 100% automated.</p>
           <p class="signed">- Mark Blanchard,<br/>Water Works Industrial Services</p>
         </div>
 -->
-        <img src="../assets/img/sliders/spitfire-demo.jpg" alt="Spirfire rotary shotgunning">
+        <img src="/assets/img/sliders/spitfire-demo.jpg" alt="Spirfire rotary shotgunning">
       </div>
 
     </div><!-- End wrapper -->
