--- a/waterblast-automation/navigator-small-pipe-cleaning.html
+++ b/waterblast-automation/navigator-small-pipe-cleaning.html
@@ -27,17 +27,17 @@ master-slider: yes
       <div class="ms-showcase2-template">
         <div class="master-slider ms-skin-default" id="masterslider">
           <div class="ms-slide">
-            <img class="ms-brd" src="../assets/img/blank.gif" data-src="../assets/img/product/nav-07.jpg" alt="StoneAge Navigator small process pipe cleaning">
-            <img class="ms-thumb" src="../assets/img/product/thumb-nav-07.jpg" alt="thumb">
-              <a data-type="video" href="https://www.youtube.com/embed/TgKqzxyf72A"> </a>
+            <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/nav-07.jpg" alt="StoneAge Navigator small process pipe cleaning">
+            <img class="ms-thumb" src="/assets/img/product/thumb-nav-07.jpg" alt="thumb">
+<!--              <a data-type="video" href="https://www.youtube.com/embed/TgKqzxyf72A"> </a>-->
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/nav-06.jpg" alt="StoneAge Navigator small process pipe cleaning">
-            <img class="ms-thumb" src="../assets/img/product/thumb-nav-06.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/nav-06.jpg" alt="StoneAge Navigator small process pipe cleaning">
+            <img class="ms-thumb" src="/assets/img/product/thumb-nav-06.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/nav-05.jpg" alt="StoneAge Navigator small process pipe cleaning">
-            <img class="ms-thumb" src="../assets/img/product/thumb-nav-05.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/nav-05.jpg" alt="StoneAge Navigator small process pipe cleaning">
+            <img class="ms-thumb" src="/assets/img/product/thumb-nav-05.jpg" alt="thumb">
           </div>
         </div>
       </div>
@@ -149,16 +149,6 @@ master-slider: yes
                 <!-- End Lightbox call -->
                 <p class="caption">Navigator NAV-100 Prototype</p>
               </div>
-              <div class="col-sm-6">
-                <!-- Lightbox call -->
-                <div>
-                  <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #nav-train-vid">
-                    <img src="/assets/vid/thumb/nav-train-vid.png" alt="Navigator Training video" class="img-responsive" />
-                  </a>
-                </div>
-                <!-- End Lightbox call -->
-                <p class="caption">Navigator Training</p>
-              </div>
             </div>
           </div>
         </div>
@@ -173,9 +163,9 @@ master-slider: yes
           <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
             <div class="panel-body">
               <ul>
-                <li><a href="../assets/pdf/navigator_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Navigator Nav-100 Data Sheet</a></li>
-                <li><a href="../assets/pdf/manuals/NAV-100_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Navigator Nav-100 User Manual</a></li>
-                <li><a href="../assets/pdf/navigator_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Navigator Tool Talk</a></li>
+                <li><a href="/assets/pdf/navigator_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Navigator Nav-100 Data Sheet</a></li>
+                <li><a href="/assets/pdf/manuals/NAV-100_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Navigator Nav-100 User Manual</a></li>
+                <li><a href="/assets/pdf/navigator_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Navigator Tool Talk</a></li>
               </ul>
               <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
               <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
@@ -200,19 +190,19 @@ master-slider: yes
   </div>
   <div class="row row-centered">
     <div class="col-sm-2 col-centered">
-      <a href="/banshee"><img class="img-responsive" src="../assets/img/product/thumb-banshee-04.jpg" alt="Banshee Beetle tube cleaning tools">
+      <a href="/banshee"><img class="img-responsive" src="/assets/img/product/thumb-banshee-04.jpg" alt="Banshee Beetle tube cleaning tools">
       <h5>Banshee Beetle Tube Cleaning Tools</h5></a>
     </div>
     <div class="col-sm-2 col-centered">
-      <a href="/2inch-badger"><img class="img-responsive" src="../assets/img/product/thumb-badger-2in-06.jpg" alt="2-inch Badger Pipe Cleaning Tools">
+      <a href="/2inch-badger"><img class="img-responsive" src="/assets/img/product/thumb-badger-2in-06.jpg" alt="2-inch Badger Pipe Cleaning Tools">
       <h5>2" Badger Pipe Cleaning Tools</h5></a>
     </div>
     <div class="col-sm-2 col-centered">
-      <a href="/rotary-swivels"><img class="img-responsive" src="../assets/img/product/thumb-swivel-sg.jpg" alt="SG Swilvel Models">
+      <a href="/rotary-swivels"><img class="img-responsive" src="/assets/img/product/thumb-swivel-sg.jpg" alt="SG Swilvel Models">
       <h5>SG Swivel Models</h5></a>
     </div>
     <div class="col-sm-2 col-centered">
-      <a href="/backout-prevention"><img class="img-responsive" src="../assets/img/thumb/thumb-backout-preventers.jpg" alt="Backout Prevention for high pressure pipe cleaning">
+      <a href="/backout-prevention"><img class="img-responsive" src="/assets/img/thumb/thumb-backout-preventers.jpg" alt="Backout Prevention for high pressure pipe cleaning">
       <h5>Backout Prevention</h5></a>
     </div>
   </div>
@@ -230,8 +220,8 @@ master-slider: yes
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
-          <td><a href="../assets/pdf/navigator_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
-          <td><a href="../assets/pdf/navigator_tool_talk.pdf" target="_blank"><i class="fa fa-files-o"></i><br>Download Tool Talk</a></td>
+          <td><a href="/assets/pdf/navigator_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
+          <td><a href="/assets/pdf/navigator_tool_talk.pdf" target="_blank"><i class="fa fa-files-o"></i><br>Download Tool Talk</a></td>
           <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
       </table>
@@ -254,23 +244,23 @@ master-slider: yes
       <div class="item active">
 <!--
         <div class="insight">
-          <img src="../assets/img/quote.png" alt="quote" class="quote" />
+          <img src="/assets/img/quote.png" alt="quote" class="quote" />
           <p>The Striker worked great clearing hardened plastic polymer from piping equipment and allowed us to go 100% automated.</p>
           <p class="signed">-James Schafer,<br/>Debusk Services Group</p>
         </div>
 -->
-        <img src="../assets/img/sliders/navigator_complete_demo.jpg" alt="Navigator rotary hose device for pipe cleaning" />
+        <img src="/assets/img/sliders/navigator_complete_demo.jpg" alt="Navigator rotary hose device for pipe cleaning" />
       </div>
 
       <div class="item">
 <!--
         <div class="insight">
-          <img src="../assets/img/quote.png" alt="quote" class="quote" />
+          <img src="/assets/img/quote.png" alt="quote" class="quote" />
           <p>The StoneAge ABX-2L works great in acid service and has allowed us to become 100% automated.</p>
           <p class="signed">- Mark Blanchard,<br/>Water Works Industrial Services</p>
         </div>-->
 
-        <img src="../assets/img/sliders/navigator_complete_demo.jpg" alt="Navigator rotary hose device for pipe cleaning" />
+        <img src="/assets/img/sliders/navigator_complete_demo.jpg" alt="Navigator rotary hose device for pipe cleaning" />
       </div>
 
     </div><!-- End wrapper -->
