tab styling changes

--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -16,7 +16,7 @@ landing: yes
 -->
     <div class="col-sm-12 heading">
       <h1>Waterblast Tools &amp; Equipment</h1>
-      <h3>Rotary and Automated Tools for High Pressure Waterblasting</h3>
+      <h3>Rotary Tools and Automated Equipment for High Pressure Waterblasting</h3>
     </div>
   </div>
 
