update home page event to WWETT

--- a/index.html
+++ b/index.html
@@ -168,12 +168,14 @@ permalink: /
       <h2>Events</h2>
     </div>
     <div class="row">
-      <a href="http://info.stoneagetools.com/visit-us-at-wjta-imca-expo-2016"><img src="/assets/img/thumb/upcoming-events-wjta-expo16.png" class="img-responsive"/ alt="Visit StoneAge at WJTA-IMCA Expo 2016"></a>
+      <a href="https://wwettshow.com/" target="_blank"><img src="/assets/img/thumb/upcoming-events-wwett2017.jpg" class="img-responsive"/ alt="Visit StoneAge at WWETT 2017"></a>
       <div class="caption">
+<!--
       <h4><a href="http://info.stoneagetools.com/visit-us-at-wjta-imca-expo-2016">WJTA-IMCA Expo<br><span class="small">November 2-3, 2016<br/>
           New Orleans, LA</span></a></h4>
         <p><strong>Visit Us in Booth #903</strong></p>
         <p>The WJTA-IMCA Expo is the annual tradeshow of the WaterJet Technology Association-Industrial &amp; Municipal Cleaning Association (WJTA-IMCA). The Expo serves the global hydroblasting, vacuum truck, industrial cleaning and waterjet markets.</p>
+-->
       </div>
     </div>
   </div>
