weirdness after stash

--- a/waterblast-automation/fin-fan-accessory.html
+++ b/waterblast-automation/fin-fan-accessory.html
@@ -21,11 +21,11 @@ master-slider: yes
 <!-- Product Main -->
 <main class="container stoneage-product padding-tb-30">
   <div class="row">
-    <div class="col-md-6 margin-bottom-30">
+    <div class="col-md-5 margin-bottom-30">
 
       <!-- Master Slider -->
       <div class="ms-showcase2-template">
-        <div class="master-slider ms-skin-default" id="masterslider">
+        <div class="master-slider ms-skin-light-2" id="masterslider">
           <div class="ms-slide">
             <img src="/assets/img/blank.gif" data-src="/assets/img/product/fin-fan-07.jpg" alt="Fin fan cooler cleaning kit">
             <img class="ms-thumb" src="/assets/img/product/thumb-fin-fan-07.jpg" alt="thumb">
@@ -44,8 +44,7 @@ master-slider: yes
       <!-- End Master Slider -->
     </div>
 
-    <!-- Product Info -->
-    <div class="col-md-6 padding-left-60">
+    <div class="col-md-7 padding-left-60">
       <div class="product-heading">
         <h1>Fin Fan Accessory</h1>
         <div class="dropdown product-social">
@@ -61,146 +60,194 @@ master-slider: yes
 
       <p class="product-description">The Fin Fan Accessory, is designed to adapt the AutoBox ABX–2L for the specific requirements of cleaning Fin Fan style exchangers.</p>
       <p>Fin Fan exchangers can be much wider than standard heat exchangers and are often accessed by very narrow walkways. Fin Fan Accessory components allow the ABX-2L to be safely positioned in tight walkway spaces for this type of cleaning. Customizable rail lengths and simple mounting clamps enable the positioning system to accommodate most all Fin Fan headers and configurations.</p>
+      
+      <h2>Features</h2>
+      <ul class="feature-list">
+        <li>Lightweight positioning system is customizable to fit most exchanger sizes</li>
+        <li>Hose snout and guide tube assembly aids accurate lance control and indexing</li>
+        <li>Built-in backout prevention</li>
+        <li>Scaffold mount</li>
+      </ul>
 
-      <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-        <div class="panel panel-default">
-          <div class="panel-heading" role="tab" id="headingOne">
-            <h4 class="panel-title">
-              <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                Features <i class="indicator fa fa-caret-up pull-right" aria-hidden="true"></i>
-              </a>
-            </h4>
-          </div>
-          <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-            <div class="panel-body">
-              <ul>
-                <li>Lightweight positioning system is customizable to fit most exchanger sizes</li>
-                <li>Hose snout and guide tube assembly aids accurate lance control and indexing</li>
-                <li>Built-in backout prevention</li>
-                <li>Scaffold mount</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="panel panel-default">
-          <div class="panel-heading" role="tab" id="headingTwo">
-            <h4 class="panel-title">
-              <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                Specifications <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
-              </a>
-            </h4>
-          </div>
-          <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-            <div class="panel-body">
-              <table class="table specs table-hover">
-              <tbody>
-                <tr>
-                  <th>Horizontal Rail Length&#42;</th>
-                  <td>Standard 15 ft</td>
-                  <td><span class="metric">457 cm</span><br></td>
-                </tr>
-                <tr>
-                  <th>Vertical Rail Length&#42;</th>
-                  <td>Standard 3.5 ft</td>
-                  <td><span class="metric">107 cm</span></td>
-                </tr>
-                <tr>
-                  <th>Snout Length</th>
-                  <td>90 in.</td>
-                  <td><span class="metric">228 cm</span></td>
-                </tr>
-                <tr>
-                  <th>Hose Size</th>
-                  <td colspan="2">3/2-8/4</td>
-                </tr>
-                <tr>
-                  <th>Pitch Adjustment</th>
-                  <td>0.6–2.5 in.</td>
-                  <td><span class="metric">15–64 mm</span></td>
-                </tr>
-              </tbody>
-              </table>
-              <p>&#42;<em>Custom rail lengths available</em></p>
-            </div>
-          </div>
-        </div>
-        <div class="panel panel-default">
-          <div class="panel-heading" role="tab" id="headingThree">
-            <h4 class="panel-title">
-              <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Videos <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
-              </a>
-            </h4>
-          </div>
-          <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-            <div class="panel-body">
-              <div class="col-sm-6">
-                <!-- lightbox call -->
-                <a href="#" data-featherlight="/assets/vid/vids.html #fin-fan-vid">
-                  <img src="assets/vid/thumb/fin-fan-vid.jpg" alt="Fin Fan exchanger cleaning accessory video" class="img-responsive" />
-                </a>
-                <p class="caption">Fin Fan Accessory Overview</p>
-                <!-- end lightbox call -->
-              </div>
-              <div class="col-sm-6">
-                <!-- lightbox call -->
-                <a href="#" data-featherlight="/assets/vid/vids.html #fin-fan-train-vid">
-                  <img src="assets/vid/thumb/fin-fan-train-vid.png" alt="Fin Fan Accessory training video" class="img-responsive" />
-                </a>
-                <p class="caption">Fin Fan Accessory Training</p>
-                <!-- end lightbox call -->
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="panel panel-default">
-          <div class="panel-heading" role="tab" id="headingFour">
-            <h4 class="panel-title">
-              <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                Support <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
-              </a>
-            </h4>
-          </div>
-          <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
-            <div class="panel-body">
-              <ul>
-                <li><a href="/assets/pdf/data-sheets/fin_fan_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Fin Fan Accessory Data Sheet</a></li>
-                <li><a href="/assets/pdf/tool-talks/fin_fan_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Fin Fan Accessory Tool Talk</a></li>
-                <li><a href="/assets/pdf/manuals/FF-100_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Fin Fan Accessory Manual</a></li>
-              </ul>
-              <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
-              <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
-            </div>
-          </div>
-        </div><!-- end tab -->
-      </div><!-- end accordion -->
-
-      <a href="http://info.stoneagetools.com/fin-fan-kit-quote" class="btn btn-lg btn-block contact" role="button">Request a Quote</a>
+      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
 
   </div>
-  <!-- End Product Info -->
 
   </div>
 </main>
-<!-- End Product Main -->
+<!-- End Product Intro -->
+
+<!-- Product tabs -->
+<section class="margin-bottom-60">
+  <div class="tabs tabs-style-bar">
+    <nav>
+      <ul>
+        <li><a href="#section-bar-1"><span>Specifications</span></a></li>
+        <li><a href="#section-bar-2"><span>Manuals/Docs</span></a></li>
+        <li><a href="#section-bar-3"><span>Videos</span></a></li>
+<!--        <li><a href="#section-bar-4"><span>Service Kits</span></a></li>-->
+      </ul>
+    </nav>
+    <div class="content-wrap">
+
+      <!-- Specifications -->
+      <section id="section-bar-1">
+        <div class="col-sm-5">
+          <table class="table specs table-hover">
+          <tbody>
+            <tr>
+              <th>Horizontal Rail Length&#42;</th>
+              <td>Standard 15 ft</td>
+              <td><span class="metric">457 cm</span><br></td>
+            </tr>
+            <tr>
+              <th>Vertical Rail Length&#42;</th>
+              <td>Standard 3.5 ft</td>
+              <td><span class="metric">107 cm</span></td>
+            </tr>
+            <tr>
+              <th>Snout Length</th>
+              <td>90 in.</td>
+              <td><span class="metric">228 cm</span></td>
+            </tr>
+            <tr>
+              <th>Hose Size</th>
+              <td colspan="2">3/2-8/4</td>
+            </tr>
+            <tr>
+              <th>Pitch Adjustment</th>
+              <td>0.6–2.5 in.</td>
+              <td><span class="metric">15–64 mm</span></td>
+            </tr>
+          </tbody>
+          </table>
+        </div>
+        <aside class="col-sm-3 col-sm-offset-1 grey padding-right-30">
+          <h3>Please note:</h3>
+          <p>This product is offered as an accessory to the AutoBox ABX-2L. The required ABX-2L tractor and drive carriages are sold separately.</p>
+        </aside>
+        <aside class="col-sm-3 aside-box">
+          <h3>Package includes:</h3>
+          <ul class="list-unstyled">
+            <li>Horizontal and vertical drive rails</li>
+            <li>30-inch clamps</li>
+            <li>Guide tube assembly &amp; tubes</li>
+            <li>Scaffold mount</li>
+            <li>ABX-2L mounting plate</li>
+            <li>Hose snout</li>
+            <li>Hose collet stops</li>
+          </ul>
+        </aside>
+      </section>
+
+      <!-- Manuals/Docs -->
+      <section id="section-bar-2">
+        <div class="col-sm-4">
+          <ul class="list-unstyled basic">
+            <h3>Manuals</h3>
+            <li><a href="/assets/pdf/manuals/FF-100_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Fin Fan Accessory Manual</a></li>
+          </ul>
+        </div>
+        <div class="col-sm-4">
+          <ul class="list-unstyled basic">
+            <h3>Documentation</h3>
+            <li><a href="/assets/pdf/data-sheets/fin_fan_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Fin Fan Accessory Data Sheet</a></li>
+                <li><a href="/assets/pdf/tool-talks/fin_fan_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Fin Fan Accessory Tool Talk</a></li>
+          </ul>
+        </div>
+        <aside class="col-sm-3 col-sm-offset-1 aside-box">
+          <h3>Need Support?</h3>
+          <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
+          <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
+        </aside>
+      </section>
+
+      <!-- Videos -->
+      <section id="section-bar-3">
+        <div class="row row-centered">
+          <div class="col-sm-4 col-centered">
+            <!-- lightbox call -->
+            <a href="#" data-featherlight="/assets/vid/vids.html #fin-fan-vid">
+              <img src="assets/vid/thumb/fin-fan-vid.jpg" alt="Fin Fan exchanger cleaning accessory video" class="img-responsive" />
+            </a>
+            <p class="caption">Fin Fan Accessory Overview</p>
+          </div>
+          <div class="col-sm-4 col-centered">
+            <!-- lightbox call -->
+            <a href="#" data-featherlight="/assets/vid/vids.html #fin-fan-train-vid">
+              <img src="assets/vid/thumb/fin-fan-train-vid.png" alt="Fin Fan Accessory training video" class="img-responsive" />
+            </a>
+            <p class="caption">Fin Fan Accessory Training</p>
+          </div>
+        </div>
+      </section>
+
+      <!-- Kits 
+      <section id="section-bar-4">
+        <div class="col-sm-8">
+          <h3>The following kits are available:</h3>
+          <p><em class="grey">Click to view kit contents</em></p>
+          <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+            <div class="panel panel-default">
+              <div class="panel-heading" role="tab" id="headingOne">
+                <h4 class="panel-title">
+                  <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                    <strong>ABX-500 EPP</strong> AutoBox ABX-500 Extra Parts Package<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                  </a>
+                </h4>
+              </div>
+              <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+                <div class="panel-body">
+                  <ul>
+                    <li>Drive roller assembly</li>
+                    <li>Anti-seize</li>
+                    <li>Square-end key</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <aside class="col-sm-3 col-sm-offset-1 aside-box">
+          <h3>Need Support?</h3>
+          <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
+          <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
+        </aside>
+      </section>
+-->
+
+    </div><!-- /content -->
+  </div><!-- /tabs -->
+</section>
+<!-- End Product tabs -->
 
 <!-- Related Items -->
-<section class="related container padding-tb-30">
+<section class="related container padding-tb-30 margin-bottom-60">
   <div class="section-heading">
       <h2>Related Items</h2>
   </div>
-  <div class="row row-centered">
-    <div class="col-sm-2 col-centered">
-      <a href="/abx-2l"><img class="img-responsive" src="/assets/img/product/thumb-abx-2l-01.jpg" alt="ABX-2L flex lancing">
-      <h5>AutoBox ABX-2L</h5></a>
-    </div>
-    <div class="col-sm-2 col-centered">
-      <a href="/lightweight-positioner"><img class="img-responsive" src="/assets/img/product/thumb-lwp-02.jpg" alt="Lightweight positioner for exchanger cleaning">
-      <h5>Lightweight Positioner</h5></a>
-    </div>
-    <div class="col-sm-2 col-centered">
-      <a href="/hose-containment"><img class="img-responsive" src="/assets/img/product/thumb-hcs-01.jpg" alt="Hose containment for exchanger cleaning">
-      <h5>Hose Containment System</h5></a>
+  <div class="row">     
+    <div id="owl-related" class="owl-carousel owl-theme">
+      <div class="item">
+        <a href="/lightweight-positioner"><img class="img-responsive" src="/assets/img/product/thumb-lwp-02.jpg" alt="Lightweight positioner for exchanger cleaning">
+        <h5>Lightweight Positioner</h5></a>
+      </div>
+      <div class="item">
+        <a href="/hose-containment"><img class="img-responsive" src="/assets/img/product/thumb-hcs-01.jpg" alt="Hose containment for exchanger cleaning">
+        <h5>Hose Containment System</h5></a>
+      </div>
+      <div class="item">
+        <a href="/abx-pro"><img class="img-responsive" src="/assets/img/product/thumb-abx-pro-02.jpg" alt="AutoBox ABX-PRO hose drive for pipe cleaning">
+        <h5>AutoBox ABX-PRO</h5></a>
+      </div>
+      <div class="item">
+        <a href="/abx-2l"><img class="img-responsive" src="/assets/img/product/thumb-abx-2l-01.jpg" alt="AutoBox ABX-2L exchanger tube cleaning">
+        <h5>AutoBox ABX-2L</h5></a>
+      </div>
+      <div class="item">
+        <a href="/abx-3l"><img src="/assets/img/product/thumb-abx-3l-03.jpg" alt="AutoBox ABX-3L">
+        <h5>AutoBox ABX-3L</h5></a>
+      </div>
     </div>
   </div>
 </section>
@@ -211,8 +258,8 @@ master-slider: yes
   <div class="container padding-tb-30">
     <div class="col-md-7">
 
-        <h2>Adapt the AutoBox ABX–2L for Fin Fan style exchangers</h2>
-        <p>Customizable rail lengths and simple mounting clamps enable the positioning system to accommodate most all Fin Fan headers and configurations.</p>
+      <h2>Adapt the AutoBox ABX–2L for Fin Fan style exchangers</h2>
+      <p>Customizable rail lengths and simple mounting clamps enable the positioning system to accommodate most all Fin Fan headers and configurations.</p>
     </div>
     <div class="col-md-4 col-md-offset-1">
       <table>
