--- a/waterblast-automation/cable-swivel-tool.html
+++ b/waterblast-automation/cable-swivel-tool.html
@@ -18,37 +18,36 @@ master-slider: yes
 </div>
 <!-- End Breadcrumbs -->
 
-<!-- Product Main -->
+<!-- Product Intro -->
 <main class="container stoneage-product padding-tb-30">
   <div class="row">
-    <div class="col-md-6 margin-bottom-30">
+    <div class="col-md-5 margin-bottom-30">
 
       <!-- Master Slider -->
       <div class="ms-showcase2-template">
-        <div class="master-slider ms-skin-default" id="masterslider">
+        <div class="master-slider ms-skin-light-2" id="masterslider">
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/cst-01.jpg" alt="CST-Air Cable-Guided Boiler Cleaning">
-            <img class="ms-thumb" src="../assets/img/product/thumb-cst-01.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/cst-01.jpg" alt="CST-Air Cable-Guided Boiler Cleaning">
+            <img class="ms-thumb" src="/assets/img/product/thumb-cst-01.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/cst-02.jpg" alt="CST-Air Cable-Guided Boiler Cleaning">
-            <img class="ms-thumb" src="../assets/img/product/thumb-cst-02.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/cst-02.jpg" alt="CST-Air Cable-Guided Boiler Cleaning">
+            <img class="ms-thumb" src="/assets/img/product/thumb-cst-02.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/cst-03.jpg" alt="CST-Air Cable-Guided Boiler Cleaning">
-            <img class="ms-thumb" src="../assets/img/product/thumb-cst-03.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/cst-03.jpg" alt="CST-Air Cable-Guided Boiler Cleaning">
+            <img class="ms-thumb" src="/assets/img/product/thumb-cst-03.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/cst-04.jpg" alt="CST-Air Cable-Guided Boiler Cleaning">
-            <img class="ms-thumb" src="../assets/img/product/thumb-cst-04.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/cst-04.jpg" alt="CST-Air Cable-Guided Boiler Cleaning">
+            <img class="ms-thumb" src="/assets/img/product/thumb-cst-04.jpg" alt="thumb">
           </div>
         </div>
       </div>
       <!-- End Master Slider -->
     </div>
 
-    <!-- Product Info -->
-    <div class="col-md-6 padding-left-60">
+    <div class="col-md-7 padding-left-60">
       <div class="product-heading">
         <h1>CST-Air</h1>
         <div class="dropdown product-social">
@@ -59,134 +58,240 @@ master-slider: yes
         </div>
       <div class="clearfix"></div>
       </div>
-
+      
       <p class="product-description">The patented, hollow-shaft Cable Swivel Tool CST-Air slides on a 3/8 in. (9.5 mm) diameter stretched cable (not supplied) and can be moved by either jet reaction or by a pulling cable. Head rotation is powered by an air motor.</p>
       <p>Extension nipples further adapt the tool to various vessel sizes and improve jet quality by reducing stand-off distance.</p>
+      
+      <h2>Features</h2>
+      <ul class="feature-list">
+        <li>Direct fired furnaces, superheaters, and economizer sections</li>
+        <li>Cleaning in difficult to reach locations</li>
+        <li>Cleaning boilers, re-boilers, re-formers, cokers and precipitators</li>
+      </ul>
 
-      <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-        <div class="panel panel-default">
-          <div class="panel-heading" role="tab" id="headingOne">
-            <h4 class="panel-title">
-              <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                Applications <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
-              </a>
-            </h4>
-          </div>
-          <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-            <div class="panel-body">
-              <ul>
-                <li>Direct fired furnaces, superheaters, and economizer sections</li>
-                <li>Cleaning in difficult to reach locations</li>
-                <li>Cleaning boilers, re-boilers, re-formers, cokers and precipitators</li>
-              </ul>
-            </div>
-          </div>
-        </div>
+      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
 
-        <div class="panel panel-default">
-          <div class="panel-heading" role="tab" id="headingTwo">
-            <h4 class="panel-title">
-              <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                Specifications <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
-              </a>
-            </h4>
-          </div>
-          <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-            <div class="panel-body">
-              <table class="table specs table-hover">
-              <tbody>
-                <tr>
-                  <th>Tool Model</th>
-                  <td colspan="2">CST-Air</td>
-                </tr>
-                <tr>
-                  <th>Maximum Pressure</th>
-                  <td>10k psi</td>
-                  <td><span class="metric">690 bar</span></td>
-                </tr>
-                <tr>
-                  <th>Maximum Flow</th>
-                  <td>170 gpm</td>
-                  <td><span class="metric">640 l/min</span></td>
-                </tr>
-                <tr>
-                  <th>Inlet Connection</th>
-                  <td colspan="2">2 x 1 NPT</td>
-                </tr>
-                <tr>
-                <tr>
-                  <th>Rotation Speed</th>
-                  <td colspan="2">5-60 rpm</td>
-                </tr>
-                <tr>
-                <tr>
-                  <th>Rotation Range</th>
-                  <td colspan="2">360&deg;</td>
-                </tr>
-                <tr>
-                  <th>Weight</th>
-                  <td>46 lb</td>
-                  <td><span class="metric">21 kg</span></td>
-                </tr>
-              </tbody>
-              </table>
-            </div>
-          </div>
+  </div>
+
+  </div>
+</main>
+<!-- End Product Intro -->
+
+<!-- Product tabs -->
+<section class="margin-bottom-60">
+  <div class="tabs tabs-style-bar">
+    <nav>
+        <ul>
+            <li><a href="#section-bar-1"><span>Specifications</span></a></li>
+            <li><a href="#section-bar-2"><span>Manuals/Docs</span></a></li>
+<!--            <li><a href="#section-bar-3"><span>Service Kits</span></a></li>-->
+        </ul>
+    </nav>
+    <div class="content-wrap">
+
+      <!-- Specifications -->
+      <section id="section-bar-1">
+        <div class="col-sm-5">
+          <table class="table specs table-hover">
+          <tbody>
+            <tr>
+              <th>Tool Model</th>
+              <td colspan="2">CST-Air</td>
+            </tr>
+            <tr>
+              <th>Maximum Pressure</th>
+              <td>10k psi</td>
+              <td><span class="metric">690 bar</span></td>
+            </tr>
+            <tr>
+              <th>Maximum Flow</th>
+              <td>170 gpm</td>
+              <td><span class="metric">640 l/min</span></td>
+            </tr>
+            <tr>
+              <th>Inlet Connection</th>
+              <td colspan="2">2 x 1 NPT</td>
+            </tr>
+            <tr>
+            <tr>
+              <th>Rotation Speed</th>
+              <td colspan="2">5-60 rpm</td>
+            </tr>
+            <tr>
+            <tr>
+              <th>Rotation Range</th>
+              <td colspan="2">360&deg;</td>
+            </tr>
+            <tr>
+              <th>Weight</th>
+              <td>46 lb</td>
+              <td><span class="metric">21 kg</span></td>
+            </tr>
+          </tbody>
+          </table>
         </div>
 <!--
-        <div class="panel panel-default">
-          <div class="panel-heading" role="tab" id="headingThree">
-            <h4 class="panel-title">
-              <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Videos <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
-              </a>
-            </h4>
-          </div>
-          <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-            <div class="panel-body">
-              <div class="col-sm-6">
-                <iframe width="220" height="120" src="https://www.youtube.com/embed/3v3Y6jtWtnQ" frameborder="0" allowfullscreen></iframe><p class="caption">OD Pipe Cleaner Overview Video</p>
+        <aside class="col-sm-3 col-sm-offset-4 aside-box">
+          <h3>Package includes:</h3>
+            <ul class="list-unstyled">
+              <li>Hose feed tractor</li>
+              <li>Hose stops/backout prevention</li>
+              <li>Strap mount</li>
+              <li>Splash plate</li>
+              <li>Control box</li>
+            </ul>
+        </aside>
+-->
+        <aside class="col-sm-3 col-sm-offset-4 aside-box">
+          <h3>Need Support?</h3>
+          <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
+          <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
+        </aside>
+      </section>
+
+      <!-- Manuals/Docs -->
+      <section id="section-bar-2">
+        <div class="col-sm-4">
+          <ul class="list-unstyled basic">
+            <h3>Manuals</h3>
+            <li><a href="/assets/pdf/manuals/CST_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;CST-Air User Manual</a></li>
+          </ul>
+        </div>
+        <div class="col-sm-4">
+<!--
+          <ul class="list-unstyled basic">
+            <h3>Documentation</h3>
+            <li><a href="/assets/pdf/data-sheets/BB-100_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Bundle Blaster Data Sheet</a></li>
+          </ul>
+-->
+        </div>
+        <aside class="col-sm-3 col-sm-offset-1 aside-box">
+          <h3>Need Support?</h3>
+          <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
+          <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
+        </aside>
+      </section>
+
+      <!-- Kits
+      <section id="section-bar-3">
+        <div class="col-sm-8">
+          <h3>The following kits are available:</h3>
+          <p><em class="grey">Click to view kit contents</em></p>
+          <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+            <div class="panel panel-default">
+              <div class="panel-heading" role="tab" id="headingOne">
+                <h4 class="panel-title">
+                  <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                    <strong>ABX 614</strong> ABX-2L Belt Replacement Kit<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                  </a>
+                </h4>
+              </div>
+              <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+                <div class="panel-body">
+                  <ul>
+                    <li>Drive belt</li>
+                    <li>Belt Replacement Addendum</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="panel panel-default">
+              <div class="panel-heading" role="tab" id="headingTwo">
+                <h4 class="panel-title">
+                  <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    <strong>ABX-2L EPP</strong> 	Extra Parts Package - 6mm<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                  </a>
+                </h4>
+              </div>
+              <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+                <div class="panel-body">
+                  <ul>
+                    <li>Drive rollers </li>
+                    <li>Required square key</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="panel panel-default">
+              <div class="panel-heading" role="tab" id="headingThree">
+                <h4 class="panel-title">
+                  <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseTwo">
+                    <strong>ABX-2L EPPS</strong> 	Extra Parts Package - ???<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                  </a>
+                </h4>
+              </div>
+              <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+                <div class="panel-body">
+                  <ul>
+                    <li>Drive rollers</li>
+                    <li>Required square key</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="panel panel-default">
+              <div class="panel-heading" role="tab" id="headingFour">
+                <h4 class="panel-title">
+                  <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                    <strong>ABX-2L EP-001</strong> Extra Parts Package - 6mm, 8mm<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                  </a>
+                </h4>
+              </div>
+              <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+                <div class="panel-body">
+                  <ul>
+                    <li>Drive rollers, 2 sizes</li>
+                    <li>Required square key</li>
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
         </div>
--->
-        <div class="panel panel-default">
-          <div class="panel-heading" role="tab" id="headingFour">
-            <h4 class="panel-title">
-              <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                Support <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
-              </a>
-            </h4>
-          </div>
-          <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
-            <div class="panel-body">
-              <ul>
-                <li><a href="../assets/pdf/manuals/CST_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;CST-Air User Manual</a></li>
-              </ul>
-              <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
-              <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
-            </div>
-          </div>
-        </div><!-- end tab -->
-      </div><!-- end accordion -->
+        <aside class="col-sm-3 col-sm-offset-1 aside-box">
+          <h3>Need Support?</h3>
+          <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
+          <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
+        </aside>
+      </section> -->
 
-      <a href="../contact.html" class="btn btn-lg btn-block contact" role="button">Contact Us for Availability</a>
-    </div>
-  </div>
-  <!-- End Product Info -->
-</main>
-<!-- End Product Main -->
+
+    </div><!-- /content -->
+  </div><!-- /tabs -->
+</section>
+<!-- End Product tabs -->
 
 <!-- Related Items -->
-<section class="related container padding-tb-30">
+<section class="related container padding-tb-30 margin-bottom-60">
   <div class="section-heading">
       <h2>Related Items</h2>
   </div>
-  <div class="row row-centered">
-    <div class="col-sm-2 col-centered">
-      <a href="/yellow-jacket"><img class="img-responsive" src="../assets/img/product/thumb-yellow-jacket-02.jpg" alt="Yellow Jacket Online boiler cleaner">
-      <h5>Yellow Jacket</h5></a>
+  <div class="row">     
+    <div id="owl-related" class="owl-carousel owl-theme">
+      <div class="item">
+        <a href="/yellow-jacket"><img class="img-responsive" src="/assets/img/product/thumb-yellow-jacket-02.jpg" alt="Yellow Jacket automated high flow water lancing system for boiler cleaning">
+        <h5>Yellow Jacket</h5></a>
+      </div>
+      <div class="item">
+        <a href="/boiler-tube-cleaner"><img class="img-responsive" src="/assets/img/product/thumb-btc-01.jpg" alt="StoneAge BTC-100 Boiler Tube Cleaning system">
+        <h5>Boiler Tube cleaner</h5></a>
+      </div>
+      <div class="item">
+        <a href="/bfw-100"><img class="img-responsive" src="/assets/img/product/thumb-bfw-02.jpg" alt="StoneAge BFW-100 high flow boiler and furnace cleaner">
+        <h5>BFW-100</h5></a>
+      </div>
+      <div class="item">
+        <a href="/sm-air"><img class="img-responsive" src="/assets/img/product/thumb-sm-air-01.jpg" alt="SM-AIR large tank cleaner">
+        <h5>SM-Air</h5></a>
+      </div>
+      <div class="item">
+        <a href="/tr-130"><img class="img-responsive" src="/assets/img/product/thumb-tr-130-01.jpg" alt="Torus TR-130 3D tank cleaning">
+        <h5>Torus TR-130</h5></a>
+      </div>
+      <div class="item">
+        <a href="/tr-200"><img class="img-responsive" src="/assets/img/product/thumb-tr-200-01.jpg" alt="Torus TR-200 3D tank cleaning">
+        <h5>Torus TR-200</h5></a>
+      </div>
     </div>
   </div>
 </section>
@@ -203,6 +308,8 @@ master-slider: yes
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
+<!--          <td><a href="/assets/pdf/data-sheets/BB-100_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>-->
+<!--          <td><a href="/assets/pdf/tool-talks/abx-pro_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Tool Talk</a></td>-->
           <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
       </table>
