--- a/waterblast-automation/floor-cleaner.html
+++ b/waterblast-automation/floor-cleaner.html
@@ -18,29 +18,28 @@ master-slider: yes
 </div>
 <!-- End Breadcrumbs -->
 
-<!-- Product Main -->
+<!-- Product Intro -->
 <main class="container stoneage-product padding-tb-30">
   <div class="row">
-    <div class="col-md-6 margin-bottom-30">
+    <div class="col-md-5 margin-bottom-30">
 
       <!-- Master Slider -->
       <div class="ms-showcase2-template">
-        <div class="master-slider ms-skin-default" id="masterslider">
+        <div class="master-slider ms-skin-light-2" id="masterslider">
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/fcsv-01.jpg" alt="StoneAge automated floor cleaner">
-            <img class="ms-thumb" src="../assets/img/product/thumb-fcsv-01.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/fcsv-01.jpg" alt="StoneAge automated floor cleaner">
+            <img class="ms-thumb" src="/assets/img/product/thumb-fcsv-01.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/fcsv-02.jpg" alt="StoneAge automated floor cleaner">
-            <img class="ms-thumb" src="../assets/img/product/thumb-fcsv-02.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/fcsv-02.jpg" alt="StoneAge automated floor cleaner">
+            <img class="ms-thumb" src="/assets/img/product/thumb-fcsv-02.jpg" alt="thumb">
           </div>
         </div>
       </div>
       <!-- End Master Slider -->
     </div>
 
-    <!-- Product Info -->
-    <div class="col-md-6 padding-left-60">
+    <div class="col-md-7 padding-left-60">
       <div class="product-heading">
         <h1>Floor Cleaner</h1>
         <div class="dropdown product-social">
@@ -51,146 +50,244 @@ master-slider: yes
         </div>
       <div class="clearfix"></div>
       </div>
-
+      
       <p class="product-description">Floor Cleaners perform a wide range of functions including cleaning paint markings and degreasing surfaces, as well as removing coatings, contaminants, and membranes. They are also powerful enough to scarify concrete.</p>
+      
+      <h2>Features</h2>
+      <ul class="feature-list">
+        <li>Adjustable rotation speeds – longer dwell time for heavier deposits or shorter for lighter deposits</li>
+        <li>Easy height adjustment adapts standoff distance to surface conditions</li>
+        <li>Wide jet path cleans large areas quickly</li>
+        <li>Optional vacuum system recovers water and material from work area</li>
+      </ul>
+      <h3>Applications</h3>
+      <ul class="feature-list">
+        <li>Cleaning garages, parking lots, and other flat surfaces effectively and safely</li>
+        <li>Removing coatings, contaminants, and membranes</li>
+        <li>Cleaning tank and pit floors</li>
+        <li>Concrete scarification</li>
+      </ul>
 
-      <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-        <div class="panel panel-default">
-          <div class="panel-heading" role="tab" id="headingOne">
-            <h4 class="panel-title">
-              <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                Features <i class="indicator fa fa-caret-up pull-right" aria-hidden="true"></i>
-              </a>
-            </h4>
-          </div>
-          <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-            <div class="panel-body">
-              <ul>
-                <li>Adjustable rotation speeds – longer dwell time for heavier deposits or shorter for lighter deposits</li>
-                <li>Easy height adjustment adapts standoff distance to surface conditions</li>
-                <li>Wide jet path cleans large areas quickly</li>
-                <li>Optional vacuum system recovers water and material from work area</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="panel panel-default">
-          <div class="panel-heading" role="tab" id="headingApp">
-            <h4 class="panel-title">
-              <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseApp" aria-expanded="false" aria-controls="collapseApp">
-                Applications <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
-              </a>
-            </h4>
-          </div>
-          <div id="collapseApp" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingApp">
-            <div class="panel-body">
-              <h3>Ideal For:</h3>
-              <ul>
-                <li>Cleaning garages, parking lots, and other flat surfaces effectively and safely</li>
-                <li>Removing coatings, contaminants, and membranes</li>
-                <li>Cleaning tank and pit floors</li>
-                <li>Concrete scarification</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="panel panel-default">
-          <div class="panel-heading" role="tab" id="headingTwo">
-            <h4 class="panel-title">
-              <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                Specifications <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
-              </a>
-            </h4>
-          </div>
-          <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-            <div class="panel-body">
-              <table class="table specs table-hover">
-              <tbody>
-                <tr>
-                  <th>Tool Model</th>
-                  <td colspan="2">FCSV, FCSG</td>
-                </tr>
-                <tr>
-                  <th>Pressure Range</th>
-                  <td>2-22k psi</td>
-                  <td><span class="metric">138-1500 bar</span></td>
-                </tr>
-                <tr>
-                  <th>Flow Range</th>
-                  <td>Up to 28 gpm</td>
-                  <td><span class="metric">106 l/min</span></td>
-                </tr>
-                <tr>
-                <tr>
-                  <th>Rotation Speed</th>
-                  <td colspan="2">300–1000 rpm</td>
-                </tr>
-                <tr>
-                  <th>Jet Path</th>
-                  <td>24 in.</td>
-                  <td><span class="metric">610 mm</span></td>
-                </tr>
-                <tr>
-                  <th>Height Range</th>
-                  <td>1–5 in.</td>
-                  <td><span class="metric">26–127 mm</span></td>
-                </tr>
-                <tr>
-                  <th>Weight</th>
-                  <td>255 lb</td>
-                  <td><span class="metric">116 kg</span></td>
-                </tr>
-              </tbody>
-              </table>
-            </div>
-          </div>
-        </div>
-        <div class="panel panel-default">
-          <div class="panel-heading" role="tab" id="headingFour">
-            <h4 class="panel-title">
-              <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                Support <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
-              </a>
-            </h4>
-          </div>
-          <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
-            <div class="panel-body">
-              <ul>
-                <li><a href="../assets/pdf/manuals/FCSG_FCSV_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Floor Cleaner User Manual</a></li>
-              </ul>
-              <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
-              <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
-            </div>
-          </div>
-        </div><!-- end tab -->
-      </div><!-- end accordion -->
-
-      <a href="../contact.html" class="btn btn-lg btn-block contact" role="button">Contact Us for Availability</a>
+      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
 
   </div>
-  <!-- End Product Info -->
 
   </div>
 </main>
-<!-- End Product Main -->
+<!-- End Product Intro -->
+
+<!-- Product tabs -->
+<section class="margin-bottom-60">
+  <div class="tabs tabs-style-bar">
+    <nav>
+        <ul>
+            <li><a href="#section-bar-1"><span>Specifications</span></a></li>
+            <li><a href="#section-bar-2"><span>Manuals/Docs</span></a></li>
+<!--            <li><a href="#section-bar-3"><span>Service Kits</span></a></li>-->
+        </ul>
+    </nav>
+    <div class="content-wrap">
+
+      <!-- Specifications -->
+      <section id="section-bar-1">
+        <div class="col-sm-5">
+          <table class="table specs table-hover">
+          <tbody>
+            <tr>
+              <th>Tool Model</th>
+              <td colspan="2">FCSV, FCSG</td>
+            </tr>
+            <tr>
+              <th>Pressure Range</th>
+              <td>2-22k psi</td>
+              <td><span class="metric">138-1500 bar</span></td>
+            </tr>
+            <tr>
+              <th>Flow Range</th>
+              <td>Up to 28 gpm</td>
+              <td><span class="metric">106 l/min</span></td>
+            </tr>
+            <tr>
+            <tr>
+              <th>Rotation Speed</th>
+              <td colspan="2">300–1000 rpm</td>
+            </tr>
+            <tr>
+              <th>Jet Path</th>
+              <td>24 in.</td>
+              <td><span class="metric">610 mm</span></td>
+            </tr>
+            <tr>
+              <th>Height Range</th>
+              <td>1–5 in.</td>
+              <td><span class="metric">26–127 mm</span></td>
+            </tr>
+            <tr>
+              <th>Weight</th>
+              <td>255 lb</td>
+              <td><span class="metric">116 kg</span></td>
+            </tr>
+          </tbody>
+          </table>
+        </div>
+<!--
+        <aside class="col-sm-3 col-sm-offset-4 aside-box">
+          <h3>Package includes:</h3>
+            <ul class="list-unstyled">
+              <li>Hose feed tractor</li>
+              <li>Hose stops/backout prevention</li>
+              <li>Strap mount</li>
+              <li>Splash plate</li>
+              <li>Control box</li>
+            </ul>
+        </aside>
+-->
+        <aside class="col-sm-3 col-sm-offset-4 aside-box">
+          <h3>Need Support?</h3>
+          <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
+          <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
+        </aside>
+      </section>
+
+      <!-- Manuals/Docs -->
+      <section id="section-bar-2">
+        <div class="col-sm-4">
+          <ul class="list-unstyled basic">
+            <h3>Manuals</h3>
+            <li><a href="/assets/pdf/manuals/FCSG_FCSV_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Floor Cleaner User Manual</a></li>
+          </ul>
+        </div>
+        <div class="col-sm-4">
+<!--
+          <ul class="list-unstyled basic">
+            <h3>Documentation</h3>
+            <li><a href="/assets/pdf/data-sheets/BB-100_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Bundle Blaster Data Sheet</a></li>
+          </ul>
+-->
+        </div>
+        <aside class="col-sm-3 col-sm-offset-1 aside-box">
+          <h3>Need Support?</h3>
+          <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
+          <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
+        </aside>
+      </section>
+
+      <!-- Kits
+      <section id="section-bar-3">
+        <div class="col-sm-8">
+          <h3>The following kits are available:</h3>
+          <p><em class="grey">Click to view kit contents</em></p>
+          <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+            <div class="panel panel-default">
+              <div class="panel-heading" role="tab" id="headingOne">
+                <h4 class="panel-title">
+                  <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                    <strong>ABX 614</strong> ABX-2L Belt Replacement Kit<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                  </a>
+                </h4>
+              </div>
+              <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+                <div class="panel-body">
+                  <ul>
+                    <li>Drive belt</li>
+                    <li>Belt Replacement Addendum</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="panel panel-default">
+              <div class="panel-heading" role="tab" id="headingTwo">
+                <h4 class="panel-title">
+                  <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    <strong>ABX-2L EPP</strong> 	Extra Parts Package - 6mm<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                  </a>
+                </h4>
+              </div>
+              <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+                <div class="panel-body">
+                  <ul>
+                    <li>Drive rollers </li>
+                    <li>Required square key</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="panel panel-default">
+              <div class="panel-heading" role="tab" id="headingThree">
+                <h4 class="panel-title">
+                  <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseTwo">
+                    <strong>ABX-2L EPPS</strong> 	Extra Parts Package - ???<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                  </a>
+                </h4>
+              </div>
+              <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+                <div class="panel-body">
+                  <ul>
+                    <li>Drive rollers</li>
+                    <li>Required square key</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="panel panel-default">
+              <div class="panel-heading" role="tab" id="headingFour">
+                <h4 class="panel-title">
+                  <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                    <strong>ABX-2L EP-001</strong> Extra Parts Package - 6mm, 8mm<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                  </a>
+                </h4>
+              </div>
+              <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+                <div class="panel-body">
+                  <ul>
+                    <li>Drive rollers, 2 sizes</li>
+                    <li>Required square key</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <aside class="col-sm-3 col-sm-offset-1 aside-box">
+          <h3>Need Support?</h3>
+          <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
+          <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
+        </aside>
+      </section> -->
+
+
+    </div><!-- /content -->
+  </div><!-- /tabs -->
+</section>
+<!-- End Product tabs -->
 
 <!-- Related Items -->
-<section class="related container padding-tb-30">
+<section class="related container padding-tb-30 margin-bottom-60">
   <div class="section-heading">
       <h2>Related Items</h2>
   </div>
-  <div class="row row-centered">
-    <div class="col-sm-2 col-centered">
-      <a href="/self-rotary-cleaning-heads"><img class="img-responsive" src="../assets/img/product/thumb-sg-30-01.jpg" alt="Self-Rotary Heads">
-      <h5>Self-Rotary Heads</h5></a>
-    </div>
-    <div class="col-sm-2 col-centered">
-      <a href="/powered-cleaning-heads"><img class="img-responsive" src="../assets/img/product/thumb-sg-e60-01.jpg" alt="Powered Rotational Heads">
-      <h5>Powered Rotational Heads</h5></a>
-    </div>
-    <div class="col-sm-2 col-centered">
-      <a href="/striker"><img class="img-responsive" src="../assets/img/product/thumb-striker-02.jpg" alt="Striker remote shotgunning">
-      <h5>Striker</h5></a>
+  <div class="row">     
+    <div id="owl-related" class="owl-carousel owl-theme">
+      <div class="item">
+        <a href="/self-rotary-cleaning-heads"><img class="img-responsive" src="/assets/img/product/thumb-sg-30-01.jpg" alt="Self-Rotary Heads">
+        <h5>Self-Rotary Heads</h5></a>
+      </div>
+      <div class="item">
+        <a href="/powered-cleaning-heads"><img class="img-responsive" src="/assets/img/product/thumb-sg-e60-01.jpg" alt="Powered Rotational Heads">
+        <h5>Powered Rotational Heads</h5></a>
+      </div>
+      <div class="item">
+        <a href="/striker"><img class="img-responsive" src="/assets/img/product/thumb-striker-02.jpg" alt="Striker remote shotgunning">
+        <h5>Striker</h5></a>
+      </div>
+      <div class="item">
+        <a href="/barracuda"><img class="img-responsive" src="/assets/img/product/thumb-barracuda-01.jpg" alt="Barracuda Shotgun Cleaning">
+        <h5>Barracuda</h5></a>
+      </div>
+      <div class="item">
+        <a href="/spitfire"><img class="img-responsive" src="/assets/img/product/thumb-spitfire-01.jpg" alt="SpitFire Shotgun Cleaning">
+        <h5>Spitfire</h5></a>
+      </div>
     </div>
   </div>
 </section>
@@ -207,12 +304,14 @@ master-slider: yes
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
+<!--          <td><a href="/assets/pdf/data-sheets/BB-100_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>-->
+<!--          <td><a href="/assets/pdf/tool-talks/abx-pro_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Tool Talk</a></td>-->
           <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
       </table>
     </div>
   </div>
 </section>
-<!-- End Product extras -->
+<!-- Product extras -->
 
 {% include footer-cta.html %}
