moving right along - page updates

--- a/waterblast-automation/blackhawk-concrete-demo.html
+++ b/waterblast-automation/blackhawk-concrete-demo.html
@@ -308,23 +308,25 @@ master-slider: yes
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
+<!--
         <div class="insight">
-          <img src="/assets/img/quote.png" alt="quote" class="quote" />
+          <img src="../assets/img/quote.png" alt="quote" class="quote" />
           <p>It’ll pay for itself just on better cleaning.</p>
           <p class="signed">-Shawn Barker,<br/>Barker Construction</p>
         </div>
-        <img src="/assets/img/sliders/abx_with_operator.jpg" alt="ABX-500 high pressure pipe cleaning">
+-->
+        <img src="../assets/img/sliders/bhk_skyjack.jpg" alt="Blackhawk concrete demo bridge">
       </div>
 
       <div class="item">
 <!--
         <div class="insight">
-          <img src="/assets/img/quote.png" alt="quote" class="quote" />
+          <img src="../assets/img/quote.png" alt="quote" class="quote" />
           <p>The StoneAge ABX-2L works great in acid service and has allowed us to become 100% automated.</p>
           <p class="signed">- Mark Blanchard,<br/>Water Works Industrial Services</p>
         </div>
 -->
-        <img src="/assets/img/sliders/abx-500_vertical_tank.jpg" alt="AutoBox ABX-500 vertical tank cleaning">
+        <img src="../assets/img/sliders/bhk-bobcat.jpg" alt="Blackhawk concrete demo with bobcat skidsteer">
       </div>
 
     </div><!-- End wrapper -->
