--- a/waterblast-automation/inside-diameter-pipe-cleaner.html
+++ b/waterblast-automation/inside-diameter-pipe-cleaner.html
@@ -21,26 +21,25 @@ master-slider: yes
 <!-- Product Main -->
 <main class="container stoneage-product padding-tb-30">
   <div class="row">
-    <div class="col-md-6 margin-bottom-30">
+    <div class="col-md-5 margin-bottom-30">
 
       <!-- Master Slider -->
       <div class="ms-showcase2-template">
-        <div class="master-slider ms-skin-default" id="masterslider">
+        <div class="master-slider ms-skin-light-2" id="masterslider">
           <div class="ms-slide">
-            <img class="ms-brd" src="../assets/img/blank.gif" data-src="../assets/img/product/pipe-id-01.jpg" alt="Inside diameter pipe ID cleaner">
-            <img class="ms-thumb" src="../assets/img/product/thumb-pipe-id-01.jpg" alt="thumb">
+            <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/pipe-id-01.jpg" alt="Inside diameter pipe ID cleaner">
+            <img class="ms-thumb" src="/assets/img/product/thumb-pipe-id-01.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/pipe-id-02.jpg" alt="Inside diameter pipe ID cleaner">
-            <img class="ms-thumb" src="../assets/img/product/thumb-pipe-id-02.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/pipe-id-02.jpg" alt="Inside diameter pipe ID cleaner">
+            <img class="ms-thumb" src="/assets/img/product/thumb-pipe-id-02.jpg" alt="thumb">
           </div>
         </div>
       </div>
       <!-- End Master Slider -->
     </div>
 
-    <!-- Product Info -->
-    <div class="col-md-6 padding-left-60">
+    <div class="col-md-7 padding-left-60">
       <div class="product-heading">
         <h1>ID Pipe Cleaner</h1>
         <div class="dropdown product-social">
@@ -51,136 +50,172 @@ master-slider: yes
         </div>
       <div class="clearfix"></div>
       </div>
+      
+      <p class="product-description">The StoneAge Inside Diameter Pipe Cleaner is an automated rigid lance system designed to clean the interior surface of drill pipes used in the oil and gas industry. The Inside Diameter Pipe Cleaner can run pressures up to 40K psi (2800 bar) and has adjustable rotation and stroke controls to optimize blast settings for any deposit including cement, drill mud, paraffin, and NORM. This system is also ideal for use in the descaling or pickling process used in many steel foundries.</p>
+      
+      <h2>Features</h2>
+      <ul class="feature-list">
+        <li>Affordable modular design is configurable to clean pipes up to 55 ft (16.7 m) in length</li>
+        <li>Can be adapted to a variety of pressures and flows up to 60 gpm (227 l/min) and 40k psi (2800 bar) for the highest level of cleaning efficiency</li>
+        <li>Rigid rotating lance allows all power or flow to be concentrated for cleaning rather than pulling or rotation</li>
+        <li>Independently adjustable rotation and feed controls can be set for optimal dwell to match any type of deposit</li>
+        <li>Heavy-duty carriage assembly adapts to large diameter lances</li>
+        <li>Rugged pipe vice attachment helps stabilize pipe movement</li>
+        <li>Automated operation delivers consistent and repeatable results when cleaning thousands of linear feet of pipe</li>
+      </ul>
 
-      <p class="product-description">
-The StoneAge Inside Diameter Pipe Cleaner is an automated rigid lance system designed to clean the interior surface of drill pipes used in the oil and gas industry. The Inside Diameter Pipe Cleaner can run pressures up to 40K psi (2800 bar) and has adjustable rotation and stroke controls to optimize blast settings for any deposit including cement, drill mud, paraffin, and NORM. This system is also ideal for use in the descaling or pickling process used in many steel foundries.</p>
-
-      <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-        <div class="panel panel-default">
-          <div class="panel-heading" role="tab" id="headingOne">
-            <h4 class="panel-title">
-              <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                Features <i class="indicator fa fa-caret-up pull-right" aria-hidden="true"></i>
-              </a>
-            </h4>
-          </div>
-          <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-            <div class="panel-body">
-              <ul>
-                <li>Affordable modular design is configurable to clean pipes up to 55 ft (16.7 m) in length</li>
-                <li>Can be adapted to a variety of pressures and flows up to 60 gpm (227 l/min) and 40k psi (2800 bar) for the highest level of cleaning efficiency</li>
-                <li>Rigid rotating lance allows all power or flow to be concentrated for cleaning rather than pulling or rotation</li>
-                <li>Independently adjustable rotation and feed controls can be set for optimal dwell to match any type of deposit</li>
-                <li>Heavy-duty carriage assembly adapts to large diameter lances</li>
-                <li>Rugged pipe vice attachment helps stabilize pipe movement</li>
-                <li>Automated operation delivers consistent and repeatable results when cleaning thousands of linear feet of pipe</li>
-                <li>Complete package includes adjustable jack stands, Control Box, rigid lance, and cleaning heads</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="panel panel-default">
-          <div class="panel-heading" role="tab" id="headingTwo">
-            <h4 class="panel-title">
-              <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                Specifications <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
-              </a>
-            </h4>
-          </div>
-          <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-            <div class="panel-body">
-              <table class="table specs table-hover">
-              <tbody>
-                <tr>
-                  <th>Tool Model</th>
-                  <td colspan="2">ID Pipe Cleaner</td>
-                </tr>
-                <tr>
-                  <th>Pressure Range</th>
-                  <td>Up to 40k psi</td>
-                  <td><span class="metric">2800 bar</span></td>
-                </tr>
-                <tr>
-                  <th>Flow Range</th>
-                  <td>Up to 60 gpm</td>
-                  <td><span class="metric">227 l/min</span></td>
-                </tr>
-                <tr>
-                  <th>Rotation Speed</th>
-                  <td colspan="2">50-300 rpm</td>
-                </tr>
-                <tr>
-                  <th>Stroke Length</th>
-                  <td>Up to 55 ft</td>
-                  <td><span class="metric">16.7 m</span></td>
-                </tr>
-                <tr>
-                  <th>Weight</th>
-                  <td>87 lb</td>
-                  <td><span class="metric">40 kg</span></td>
-                </tr>
-              </tbody>
-              </table>
-            </div>
-          </div>
-        </div>
-        <div class="panel panel-default">
-          <div class="panel-heading" role="tab" id="headingFour">
-            <h4 class="panel-title">
-              <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                Support <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
-              </a>
-            </h4>
-          </div>
-          <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
-            <div class="panel-body">
-              <ul>
-<!--
-                <li><a href="#"><i class="fa fa-file-text-o"></i> &nbsp;BRLM Data Sheet</a></li>
-                <li><a href="#"><i class="fa fa-file-text-o"></i> &nbsp;BRLM User Manual</a></li>
--->
-              </ul>
-              <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
-              <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
-            </div>
-          </div>
-        </div><!-- end tab -->
-      </div><!-- end accordion -->
-
-      <a href="../contact.html" class="btn btn-lg btn-block contact" role="button">Contact Us for Availability</a>
+      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
 
   </div>
-  <!-- End Product Info -->
 
   </div>
 </main>
-<!-- End Product Main -->
+<!-- End Product Intro -->
+
+<!-- Product tabs -->
+<section class="margin-bottom-60">
+  <div class="tabs tabs-style-bar">
+    <nav>
+      <ul>
+        <li><a href="#section-bar-1"><span>Specifications</span></a></li>
+<!--        <li><a href="#section-bar-2"><span>Manuals/Docs</span></a></li>-->
+<!--        <li><a href="#section-bar-3"><span>Videos</span></a></li>-->
+<!--        <li><a href="#section-bar-4"><span>Service Kits</span></a></li>-->
+      </ul>
+    </nav>
+    <div class="content-wrap">
+
+      <!-- Specifications -->
+      <section id="section-bar-1">
+        <div class="col-sm-5">
+          <table class="table specs table-hover">
+          <tbody>
+            <tr>
+              <th>Tool Model</th>
+              <td colspan="2">ID Pipe Cleaner</td>
+            </tr>
+            <tr>
+              <th>Pressure Range</th>
+              <td>Up to 40k psi</td>
+              <td><span class="metric">2800 bar</span></td>
+            </tr>
+            <tr>
+              <th>Flow Range</th>
+              <td>Up to 60 gpm</td>
+              <td><span class="metric">227 l/min</span></td>
+            </tr>
+            <tr>
+              <th>Rotation Speed</th>
+              <td colspan="2">50-300 rpm</td>
+            </tr>
+            <tr>
+              <th>Stroke Length</th>
+              <td>Up to 55 ft</td>
+              <td><span class="metric">16.7 m</span></td>
+            </tr>
+            <tr>
+              <th>Weight</th>
+              <td>87 lb</td>
+              <td><span class="metric">40 kg</span></td>
+            </tr>
+          </tbody>
+          </table>
+        </div>
+        <aside class="col-sm-3 col-sm-offset-1 aside-box" style="border-right:15px solid #fff;">
+          <h3>Package includes:</h3>
+            <ul class="list-unstyled">
+              <li>Rigid lance</li>
+              <li>Cleaning heads</li>
+              <li>Adjustable jack stands</li>
+              <li>Control box</li>
+            </ul>
+        </aside>
+        <aside class="col-sm-3 aside-box">
+          <h3>Need Support?</h3>
+          <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
+          <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
+        </aside>
+      </section>
+
+      <!-- Videos
+      <section id="section-bar-3">
+        <div class="row row-centered">
+          <div class="col-sm-4 col-centered">
+            <!-- lightbox call
+            <a href="#" data-featherlight="/assets/vid/vids.html #ast-vid">
+              <img src="assets/vid/thumb/ast-vid.png" alt="AutoStroke exchanger cleaning accessory video" class="img-responsive" />
+            </a>
+            <p class="caption">AutoStroke Overview</p>
+          </div>
+        </div>
+      </section> -->
+
+      <!-- Kits 
+      <section id="section-bar-4">
+        <div class="col-sm-8">
+          <h3>The following kits are available:</h3>
+          <p><em class="grey">Click to view kit contents</em></p>
+          <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+            <div class="panel panel-default">
+              <div class="panel-heading" role="tab" id="headingOne">
+                <h4 class="panel-title">
+                  <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                    <strong>ABX-500 EPP</strong> AutoBox ABX-500 Extra Parts Package<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                  </a>
+                </h4>
+              </div>
+              <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+                <div class="panel-body">
+                  <ul>
+                    <li>Drive roller assembly</li>
+                    <li>Anti-seize</li>
+                    <li>Square-end key</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <aside class="col-sm-3 col-sm-offset-1 aside-box">
+          <h3>Need Support?</h3>
+          <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
+          <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
+        </aside>
+      </section>
+-->
+
+    </div><!-- /content -->
+  </div><!-- /tabs -->
+</section>
+<!-- End Product tabs -->
 
 <!-- Related Items -->
-<section class="related container padding-tb-30">
+<section class="related container padding-tb-30 margin-bottom-60">
   <div class="section-heading">
       <h2>Related Items</h2>
   </div>
-  <div class="row row-centered">
-    <div class="col-sm-2 col-centered">
-      <a href="/banshee"><img class="img-responsive" src="../assets/img/product/thumb-banshee-04.jpg" alt="Banshee Beetle tube cleaning tools">
-      <h5>Gopher Rotary Tools</h5></a>
-    </div>
-    <div class="col-sm-2 col-centered">
-      <a href="/2inch-badger"><img class="img-responsive" src="../assets/img/product/thumb-badger-2in-06.jpg" alt="2-inch Badger Pipe Cleaning Tools">
-      <h5>2" Badger Pipe Cleaning Tools</h5></a>
-    </div>
-    <div class="col-sm-2 col-centered">
-      <a href="/rotary-swivels"><img class="img-responsive" src="../assets/img/product/thumb-swivel-sg.jpg" alt="SG Swilvel Models">
-      <h5>SG Swilvel Models</h5></a>
-    </div>
-    <div class="col-sm-2 col-centered">
-      <a href="/rigid-lance-machine"><img class="img-responsive" src="../assets/img/product/brlm-01.jpg" alt="Rigid Lance Machine">
-      <h5>Rigid Lance Machine</h5></a>
-    </div>
-    <div class="col-sm-2 col-centered">
-      <a href="/abx-500"><img class="img-responsive" src="../assets/img/product/abx-500-02.jpg" alt="AutoBox ABX-500">
-      <h5>AutoBox ABX-500</h5></a>
+  <div class="row">     
+    <div id="owl-related" class="owl-carousel owl-theme">
+      <div class="item">
+        <a href="/banshee"><img class="img-responsive" src="/assets/img/product/thumb-banshee-04.jpg" alt="Banshee Beetle tube cleaning tools">
+        <h5>Gopher Rotary Tools</h5></a>
+      </div>
+      <div class="item">
+        <a href="/2inch-badger"><img class="img-responsive" src="/assets/img/product/thumb-badger-2in-06.jpg" alt="2-inch Badger Pipe Cleaning Tools">
+        <h5>2" Badger Pipe Cleaning Tools</h5></a>
+      </div>
+      <div class="item">
+        <a href="/rotary-swivels"><img class="img-responsive" src="/assets/img/product/thumb-swivel-sg.jpg" alt="SG Swilvel Models">
+        <h5>SG Swilvel Models</h5></a>
+      </div>
+      <div class="item">
+        <a href="/rigid-lance-machine"><img class="img-responsive" src="/assets/img/product/thumb-brlm-01.jpg" alt="Rigid Lance Machine">
+        <h5>Rigid Lance Machine</h5></a>
+      </div>
+      <div class="item">
+        <a href="/abx-500"><img class="img-responsive" src="/assets/img/product/thumb-abx-500-02.jpg" alt="AutoBox ABX-500">
+        <h5>AutoBox ABX-500</h5></a>
+      </div>
     </div>
   </div>
 </section>
@@ -191,17 +226,13 @@ The StoneAge Inside Diameter Pipe Cleaner is an automated rigid lance system des
   <div class="container padding-tb-30">
     <div class="col-md-7">
 
-        <h2>Efficient Process Pipe Cleaning</h2>
-        <p>Optimize blast settings for any deposit including cement, drill mud, paraffin, and NORM. The ID Pipe Cleaner is also ideal for use in the descaling or pickling process used in many steel foundries.</p>
+      <h2>Efficient Process Pipe Cleaning</h2>
+      <p>Optimize blast settings for any deposit including cement, drill mud, paraffin, and NORM. The ID Pipe Cleaner is also ideal for use in the descaling or pickling process used in many steel foundries.</p>
     </div>
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
-          <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
-<!--
-          <td><a href="#"><i class="fa fa-files-o"></i><br>Download Case Study</a></td>
-          <td><a href="#" target="_blank"><i class="fa fa-newspaper-o"></i><br>This Tool in the Press</a></td>
--->
+         <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
       </table>
     </div>
@@ -223,23 +254,23 @@ The StoneAge Inside Diameter Pipe Cleaner is an automated rigid lance system des
       <div class="item active">
 <!--
         <div class="insight">
-          <img src="../assets/img/quote.png" alt="quote" class="quote" />
+          <img src="/assets/img/quote.png" alt="quote" class="quote" />
           <p>The Sabertooth is very productive for us. We wouldn’t be working here if we didn’t have automated equipment.</p>
           <p class="signed">-Richard Bombard,<br/>PSC Industrial Services</p>
         </div>
 -->
-        <img src="../assets/img/sliders/id_cleaner_01.jpg" alt="Inside Diameter Pipe Cleaner">
+        <img src="/assets/img/sliders/id_cleaner_01.jpg" alt="Inside Diameter Pipe Cleaner">
       </div>
 
       <div class="item">
 <!--
         <div class="insight">
-          <img src="../assets/img/quote.png" alt="quote" class="quote" />
+          <img src="/assets/img/quote.png" alt="quote" class="quote" />
           <p>The StoneAge ABX-2L works great in acid service and has allowed us to become 100% automated.</p>
           <p class="signed">- Mark Blanchard,<br/>Water Works Industrial Services</p>
         </div>
 -->
-        <img src="../assets/img/sliders/id_cleaner_02.jpg" alt="Inside Diameter Pipe Cleaner">
+        <img src="/assets/img/sliders/id_cleaner_02.jpg" alt="Inside Diameter Pipe Cleaner">
       </div>
 
     </div><!-- End wrapper -->
@@ -255,6 +286,6 @@ The StoneAge Inside Diameter Pipe Cleaner is an automated rigid lance system des
     </a>
   </div>
 </div>
-<!--=== End Product Testimonials ===-->
+<!-- End Product Testimonials -->
 
 {% include footer-cta.html %}
