--- a/waterblast-automation/outside-diameter-pipe-cleaner.html
+++ b/waterblast-automation/outside-diameter-pipe-cleaner.html
@@ -21,26 +21,25 @@ master-slider: yes
 <!-- Product Main -->
 <main class="container stoneage-product padding-tb-30">
   <div class="row">
-    <div class="col-md-6 margin-bottom-30">
+    <div class="col-md-5 margin-bottom-30">
 
       <!-- Master Slider -->
       <div class="ms-showcase2-template">
-        <div class="master-slider ms-skin-default" id="masterslider">
+        <div class="master-slider ms-skin-light-2" id="masterslider">
           <div class="ms-slide">
-            <img class="ms-brd" src="../assets/img/blank.gif" data-src="../assets/img/product/pipe-od-01.jpg" alt="Outside diameter pipe OD cleaner">
-            <img class="ms-thumb" src="../assets/img/product/thumb-pipe-od-01.jpg" alt="thumb">
+            <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/pipe-od-01.jpg" alt="Outside diameter pipe OD cleaner">
+            <img class="ms-thumb" src="/assets/img/product/thumb-pipe-od-01.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/pipe-od-02.jpg" alt="Outside diameter pipe OD cleaner">
-            <img class="ms-thumb" src="../assets/img/product/thumb-pipe-od-02.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/pipe-od-02.jpg" alt="Outside diameter pipe OD cleaner">
+            <img class="ms-thumb" src="/assets/img/product/thumb-pipe-od-02.jpg" alt="thumb">
           </div>
         </div>
       </div>
       <!-- End Master Slider -->
     </div>
 
-    <!-- Product Info -->
-    <div class="col-md-6 padding-left-60">
+    <div class="col-md-7 padding-left-60">
       <div class="product-heading">
         <h1>OD Pipe Cleaner</h1>
         <div class="dropdown product-social">
@@ -51,151 +50,172 @@ master-slider: yes
         </div>
       <div class="clearfix"></div>
       </div>
+      
+      <p class="product-description">The StoneAge Outside Diameter Pipe Cleaner is a powerful and affordable automated solution for cleaning the outer surface of drill pipes used in the oil and gas industry. The length of the system can be easily customized for permanent installation into pipe cleaning facilities providing consistent and efficient removal of drill mud, concrete, slag or other exterior deposits on large volumes of pipe.</p>
+      
+      <h2>Features</h2>
+      <ul class="feature-list">
+        <li>Can be adapted to a variety of pressures and flows for highest level of cleaning efficiency</li>
+        <li>Rotation and traverse speed are independently adjustable to customize dwell time</li>
+        <li>Several head options available for delivering more concentrated power or covering a wider cleaning path</li>
+        <li>Match the stroke length to the pipe sections being cleaned with simple auto-stops for efficient cleaning with no wasted time</li>
+        <li>Modular rail allows the assembly to be customized to any length</li>
+        <li>Fully automated operation delivers consistent and repeatable results when cleaning thousands of linear feet of pipe lengths</li>
+      </ul>
 
-      <p class="product-description">
-The StoneAge Outside Diameter Pipe Cleaner is a powerful and affordable automated solution for cleaning the outer surface of drill pipes used in the oil and gas industry. The length of the system can be easily customized for permanent installation into pipe cleaning facilities providing consistent and efficient removal of drill mud, concrete, slag or other exterior deposits on large volumes of pipe.</p>
+      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
 
-      <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-        <div class="panel panel-default">
-          <div class="panel-heading" role="tab" id="headingOne">
-            <h4 class="panel-title">
-              <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                Features <i class="indicator fa fa-caret-up pull-right" aria-hidden="true"></i>
-              </a>
-            </h4>
-          </div>
-          <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-            <div class="panel-body">
-              <ul>
-                <li>Can be adapted to a variety of pressures and flows for highest level of cleaning efficiency</li>
-                <li>Rotation and traverse speed are independently adjustable to customize dwell time</li>
-                <li>Several head options available for delivering more concentrated power or covering a wider cleaning path</li>
-                <li>Match the stroke length to the pipe sections being cleaned with simple auto-stops for efficient cleaning
-with no wasted time</li>
-                <li>Modular rail allows the assembly to be customized to any length</li>
-                <li>Fully automated operation delivers consistent and repeatable results when cleaning thousands of linear feet of pipe lengths</li>
-              </ul>
-            </div>
+  </div>
+
+  </div>
+</main>
+<!-- End Product Intro -->
+
+<!-- Product tabs -->
+<section class="margin-bottom-60">
+  <div class="tabs tabs-style-bar">
+    <nav>
+      <ul>
+        <li><a href="#section-bar-1"><span>Specifications</span></a></li>
+<!--        <li><a href="#section-bar-2"><span>Manuals/Docs</span></a></li>-->
+<!--        <li><a href="#section-bar-3"><span>Videos</span></a></li>-->
+<!--        <li><a href="#section-bar-4"><span>Service Kits</span></a></li>-->
+      </ul>
+    </nav>
+    <div class="content-wrap">
+
+      <!-- Specifications -->
+      <section id="section-bar-1">
+        <div class="col-sm-5">
+          <table class="table specs table-hover">
+          <tbody>
+            <tr>
+              <th>Tool Model</th>
+              <td colspan="2">OD Pipe Cleaner</td>
+            </tr>
+            <tr>
+              <th>Pressure Range</th>
+              <td>Up to 40k psi</td>
+              <td><span class="metric">2800 bar</span></td>
+            </tr>
+            <tr>
+              <th>Flow Range</th>
+              <td>Up to 50 gpm</td>
+              <td><span class="metric">190 l/min</span></td>
+            </tr>
+            <tr>
+              <th>Rotation Speed</th>
+              <td colspan="2">50-1000 rpm</td>
+            </tr>
+            <tr>
+            <tr>
+              <th>Linear Speed</th>
+              <td>7-40 ft/min</td>
+              <td><span class="metric">2.1-12 m/min</span></td>
+            </tr>
+            <tr>
+              <th>Air Supply</th>
+              <td>60 cfm @ 80 psi</td>
+              <td><span class="metric">100 m/hr @ 5.5 bar</span></td>
+            </tr>
+            <tr>
+              <th>Rail Length</th>
+              <td>Up to 60 ft</td>
+              <td><span class="metric">18.3 m</span></td>
+            </tr>
+          </tbody>
+          </table>
+        </div>
+        <aside class="col-sm-3 col-sm-offset-4 aside-box">
+          <h3>Need Support?</h3>
+          <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
+          <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
+        </aside>
+      </section>
+
+      <!-- Videos
+      <section id="section-bar-3">
+        <div class="row row-centered">
+          <div class="col-sm-4 col-centered">
+            <!-- lightbox call
+            <a href="#" data-featherlight="/assets/vid/vids.html #ast-vid">
+              <img src="assets/vid/thumb/ast-vid.png" alt="AutoStroke exchanger cleaning accessory video" class="img-responsive" />
+            </a>
+            <p class="caption">AutoStroke Overview</p>
           </div>
         </div>
-        <div class="panel panel-default">
-          <div class="panel-heading" role="tab" id="headingTwo">
-            <h4 class="panel-title">
-              <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                Specifications <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
-              </a>
-            </h4>
-          </div>
-          <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-            <div class="panel-body">
-              <table class="table specs table-hover">
-              <tbody>
-                <tr>
-                  <th>Tool Model</th>
-                  <td colspan="2">OD Pipe Cleaner</td>
-                </tr>
-                <tr>
-                  <th>Pressure Range</th>
-                  <td>Up to 40k psi</td>
-                  <td><span class="metric">2800 bar</span></td>
-                </tr>
-                <tr>
-                  <th>Flow Range</th>
-                  <td>Up to 50 gpm</td>
-                  <td><span class="metric">190 l/min</span></td>
-                </tr>
-                <tr>
-                  <th>Rotation Speed</th>
-                  <td colspan="2">50-1000 rpm</td>
-                </tr>
-                <tr>
-                <tr>
-                  <th>Linear Speed</th>
-                  <td>7-40 ft/min</td>
-                  <td><span class="metric">2.1-12 m/min</span></td>
-                </tr>
-                <tr>
-                  <th>Air Supply</th>
-                  <td>60 cfm @ 80 psi</td>
-                  <td><span class="metric">100 m/hr @ 5.5 bar</span></td>
-                </tr>
-                <tr>
-                  <th>Rail Length</th>
-                  <td>Up to 60 ft</td>
-                  <td><span class="metric">18.3 m</span></td>
-                </tr>
-              </tbody>
-              </table>
-            </div>
-          </div>
-        </div>
-<!--
-        <div class="panel panel-default">
-          <div class="panel-heading" role="tab" id="headingThree">
-            <h4 class="panel-title">
-              <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Videos <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
-              </a>
-            </h4>
-          </div>
-          <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-            <div class="panel-body">
-              <div class="col-sm-6">
-                <iframe width="220" height="120" src="https://www.youtube.com/embed/3v3Y6jtWtnQ" frameborder="0" allowfullscreen></iframe><p class="caption">OD Pipe Cleaner Overview Video</p>
+      </section> -->
+
+      <!-- Kits 
+      <section id="section-bar-4">
+        <div class="col-sm-8">
+          <h3>The following kits are available:</h3>
+          <p><em class="grey">Click to view kit contents</em></p>
+          <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+            <div class="panel panel-default">
+              <div class="panel-heading" role="tab" id="headingOne">
+                <h4 class="panel-title">
+                  <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                    <strong>ABX-500 EPP</strong> AutoBox ABX-500 Extra Parts Package<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                  </a>
+                </h4>
+              </div>
+              <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+                <div class="panel-body">
+                  <ul>
+                    <li>Drive roller assembly</li>
+                    <li>Anti-seize</li>
+                    <li>Square-end key</li>
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
         </div>
+        <aside class="col-sm-3 col-sm-offset-1 aside-box">
+          <h3>Need Support?</h3>
+          <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
+          <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
+        </aside>
+      </section>
 -->
-        <div class="panel panel-default">
-          <div class="panel-heading" role="tab" id="headingFour">
-            <h4 class="panel-title">
-              <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                Support <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
-              </a>
-            </h4>
-          </div>
-          <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
-            <div class="panel-body">
-              <ul>
-<!--
-                <li><a href="#"><i class="fa fa-file-text-o"></i> &nbsp;BRLM Data Sheet</a></li>
-                <li><a href="#"><i class="fa fa-file-text-o"></i> &nbsp;BRLM User Manual</a></li>
--->
-              </ul>
-              <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
-              <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
-            </div>
-          </div>
-        </div><!-- end tab -->
-      </div><!-- end accordion -->
 
-      <a href="../contact.html" class="btn btn-lg btn-block contact" role="button">Contact Us for Availability</a>
-
-  </div>
-  <!-- End Product Info -->
-
-  </div>
-</main>
-<!-- End Product Main -->
+    </div><!-- /content -->
+  </div><!-- /tabs -->
+</section>
+<!-- End Product tabs -->
 
 <!-- Related Items -->
-<section class="related container padding-tb-30">
+<section class="related container padding-tb-30 margin-bottom-60">
   <div class="section-heading">
       <h2>Related Items</h2>
   </div>
-  <div class="row row-centered">
-    <div class="col-sm-2 col-centered">
-      <a href="/barracuda"><img class="img-responsive" src="../assets/img/product/thumb-barracuda-01.jpg" alt="Barracuda Rotary Shotgun Tools">
-      <h5>Barracuda Rotary Shotgun Tools</h5></a>
-    </div>
-    <div class="col-sm-2 col-centered">
-      <a href="/spitfire"><img class="img-responsive" src="../assets/img/product/thumb-spitfire-01.jpg" alt="Spitfire Rotary Shotgun Tools">
-      <h5>Spitfire Rotary Shotgun Tools</h5></a>
-    </div>
-    <div class="col-sm-2 col-centered">
-      <a href="/powered-cleaning-heads"><img class="img-responsive" src="../assets/img/product/thumb-sg-e60-01.jpg" alt="Spitfire Rotary Shotgun Tools">
-      <h5>Powered Rotational Heads</h5></a>
+  <div class="row">     
+    <div id="owl-related" class="owl-carousel owl-theme">
+      <div class="item">
+        <a href="/id-pipe-cleaner"><img class="img-responsive" src="/assets/img/product/thumb-pipe-id-01.jpg" alt="Inside Diameter Pipe Cleaner">
+        <h5>ID Pipe Cleaner</h5></a>
+      </div>
+      <div class="item">
+        <a href="/self-rotary-cleaning-heads"><img class="img-responsive" src="/assets/img/product/thumb-sg-30-01.jpg" alt="Self-Rotary Heads">
+        <h5>Self-Rotary Heads</h5></a>
+      </div>
+      <div class="item">
+        <a href="/powered-cleaning-heads"><img class="img-responsive" src="/assets/img/product/thumb-sg-e60-01.jpg" alt="Powered Rotational Heads">
+        <h5>Powered Rotational Heads</h5></a>
+      </div>
+      <div class="item">
+        <a href="/striker"><img class="img-responsive" src="/assets/img/product/thumb-striker-01.jpg" alt="Striker Remote Shotgun Cleaning">
+        <h5>Striker</h5></a>
+      </div>
+      <div class="item">
+        <a href="/floor-cleaner"><img class="img-responsive" src="/assets/img/product/thumb-fcsv-01.jpg" alt="High pressure floor cleaner">
+        <h5>Floor Cleaner</h5></a>
+      </div>
+      <div class="item">
+        <a href="/bundle-blaster"><img class="img-responsive" src="/assets/img/product/thumb-bundle-blaster-01.jpg" alt="Bundle Blaster">
+        <h5>Bundle Blaster</h5></a>
+      </div>
     </div>
   </div>
 </section>
@@ -206,18 +226,13 @@ with no wasted time</li>
   <div class="container padding-tb-30">
     <div class="col-md-7">
 
-        <h2>Efficient Process Pipe Cleaning</h2>
-        <p>The OD Pipe Cleaner can be easily customized for permanent installation into pipe cleaning facilities providing consistent and efficient removal of drill mud, concrete, slag or other exterior deposits on large volumes of pipe.</p>
+      <h2>Efficient Process Pipe Cleaning</h2>
+      <p>Optimize blast settings for any deposit including cement, drill mud, paraffin, and NORM. The ID Pipe Cleaner is also ideal for use in the descaling or pickling process used in many steel foundries.</p>
     </div>
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
-<!--
-          <td><a href="#" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
-          <td><a href="#"><i class="fa fa-files-o"></i><br>Download Case Study</a></td>
-          <td><a href="#" target="_blank"><i class="fa fa-newspaper-o"></i><br>This Tool in the Press</a></td>
--->
-          <td><a href="../safety-information.html" target="_blank"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
+         <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
       </table>
     </div>
@@ -239,23 +254,23 @@ with no wasted time</li>
       <div class="item active">
 <!--
         <div class="insight">
-          <img src="../assets/img/quote.png" alt="quote" class="quote" />
+          <img src="/assets/img/quote.png" alt="quote" class="quote" />
           <p>The Sabertooth is very productive for us. We wouldn’t be working here if we didn’t have automated equipment.</p>
           <p class="signed">-Richard Bombard,<br/>PSC Industrial Services</p>
         </div>
 -->
-        <img src="../assets/img/sliders/pipe-od-conveyor.jpg" alt="Outside Diameter Pipe Cleaner">
+        <img src="/assets/img/sliders/id_cleaner_01.jpg" alt="Inside Diameter Pipe Cleaner">
       </div>
 
       <div class="item">
 <!--
         <div class="insight">
-          <img src="../assets/img/quote.png" alt="quote" class="quote" />
+          <img src="/assets/img/quote.png" alt="quote" class="quote" />
           <p>The StoneAge ABX-2L works great in acid service and has allowed us to become 100% automated.</p>
           <p class="signed">- Mark Blanchard,<br/>Water Works Industrial Services</p>
         </div>
 -->
-        <img src="../assets/img/sliders/od_at_pressure.jpg" alt="Outside Diameter Pipe Cleaner">
+        <img src="/assets/img/sliders/id_cleaner_02.jpg" alt="Inside Diameter Pipe Cleaner">
       </div>
 
     </div><!-- End wrapper -->
@@ -271,6 +286,6 @@ with no wasted time</li>
     </a>
   </div>
 </div>
-<!--=== End Product Testimonials ===-->
+<!-- End Product Testimonials -->
 
 {% include footer-cta.html %}
